Many fixes for the tablet pdf build

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -30,15 +30,15 @@ in the times of planetary crisis and pandemia of fear and madness, caused by int
 The technical peculiarities of \bibemph{The British Study Edition of The Urantia Papers} are as follows:
 
 \begin{itemize}
-\item The revised text of \bibemph{The Urantia Papers} is based on the original Fifth Epochal Revelation,
-which was revised according to the present scientific knowledge and spiritual enlightenment.
+\item The present text of \bibemph{The Urantia Papers} is based on that of the Fifth Epochal Revelation,
+and was revised according to the present scientific knowledge and spiritual enlightenment.
 \item Study notes have been added and are marked with an asterisk, like this$^*$.
 \item The symbol \pc\ marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
 \item Long and hard to memorise phrases like ``three hundred and forty\hyp{}five thousand'' have been converted to a compact form ``345,000''. Likewise, for phrases like ``seventy\hyp{}five per cent'' a more compact form of ``75\%'' was chosen. Similarly, the time designations like ``fifteen minutes past four o’clock'' now read ``16:15''.
 \item Designation of the author of each paper (and Foreword) is printed in \textit{italics} on a line by itself just before the text.
 \item Paragraph numbering is used both in the superscript and in the ranges printed in the head\-er of every page.
-\item Possible textual corruptions are indicated in the footnotes.
+\item Suspected textual corruptions are indicated in the footnotes.
 \item The Bibliography of the human sources used in the Revelation is printed at the end of each Paper.
       When it was deemed essential the reference to the source(s) was also indicated in the footnotes.
 \end{itemize}
