--- a/tex/p005.tex
+++ b/tex/p005.tex
@@ -7,7 +7,7 @@
 \uminitoc{The God of Personality}
 \author{Divine Counsellor}
 \vs p005 0:1 If the finite mind of man is unable to comprehend how so great and so majestic a God as the Universal Father can descend from his eternal abode in infinite perfection to fraternize with the individual human creature, then must such a finite intellect rest assurance of divine fellowship upon the truth of the fact that an actual fragment of the living God resides within the intellect of every normal\hyp{}minded and morally conscious Urantia mortal. The indwelling Thought Adjusters are a part of the eternal Deity of the Paradise Father. Man does not have to go farther than his own inner experience of the soul’s contemplation of this spiritual\hyp{}reality presence to find God and attempt communion with him.
-\vs p005 0:2 God has distributed the infinity of his eternal nature throughout the existential realities of his six absolute co\hyp{}ordinates, but he may, at any time, make direct personal contact with any part or phase or kind of creation through the agency of his prepersonal fragments. And the eternal God has also reserved to himself the prerogative of bestowing personality upon the divine Creators and the living creatures of the universe of universes, while he has further reserved the prerogative of maintaining direct and parental contact with all these personal beings through the personality circuit.
+\vs p005 0:2 God has distributed the infinity of his eternal nature\tunemarkup{pgnexus10}{\linebreak} throughout the existential realities of his six absolute co\hyp{}ordinates, but he may, at any time, make direct personal contact with any part or phase or kind of creation through the agency of his prepersonal fragments. And the eternal God has also reserved to himself the prerogative of bestowing personality upon the divine Creators and the living creatures of the universe of universes, while he has further reserved the prerogative of maintaining direct and parental contact with all these personal beings through the personality circuit.
 \usection{The Approach to God}
 \vs p005 1:1 The inability of the finite creature to approach the infinite Father is inherent, not in the Father’s aloofness, but in the finiteness and material limitations of created beings. The magnitude of the spiritual difference between the highest personality of universe existence and the lower groups of created intelligences is inconceivable. Were it possible for the lower orders of intelligence to be transported instantly into the presence of the Father himself, they would not know they were there. They would there be just as oblivious of the presence of the Universal Father as where they now are. There is a long, long road ahead of mortal man before he can consistently and within the realms of possibility ask for safe conduct into the Paradise presence of the Universal Father. Spiritually, man must be translated many times before he can attain a plane that will yield the spiritual vision which will enable him to see even any one of the Seven Master Spirits.
 \vs p005 1:2 Our Father is not in hiding; he is not in arbitrary seclusion. He has mobilized the resources of divine wisdom in a never\hyp{}ending effort to reveal himself to the children of his universal domains. There is an infinite grandeur and an inexpressible generosity connected with the majesty of his love which causes him to yearn for the association of every created being who can comprehend, love, or approach him; and it is, therefore, the limitations inherent in you, inseparable from your finite personality and material existence, that determine the time and place and circumstances in which you may achieve the goal of the journey of mortal ascension and stand in the presence of the Father at the centre of all things.
