--- a/tex/p016.tex
+++ b/tex/p016.tex
@@ -120,7 +120,7 @@
 \vs p016 8:18 \ublistelem{3.}\bibnobreakspace The faith\hyp{}grasp of the fellowship worship of Deity, associated with the loving service of humanity.
 \vs p016 8:19 \pc The full function of such a personality endowment is the beginning realization of Deity kinship. Such a selfhood, indwelt by a prepersonal fragment of God the Father, is in truth and in fact a spiritual son of God. Such a creature not only discloses capacity for the reception of the gift of the divine presence but also exhibits reactive response to the personality\hyp{}gravity circuit of the Paradise Father of all personalities.
 \usection{Reality of Human Consciousness}
-\vs p016 9:1 The cosmic\hyp{}mind\hyp{}endowed, Adjuster\hyp{}indwelt, personal creature possesses innate recognition\hyp{}realization of energy reality, mind reality, and spirit reality. The will creature is thus equipped to discern the fact, the law, and the love of God. Aside from these three inalienables of human consciousness, all human experience is really subjective except that intuitive realization of validity attaches to the \bibemph{unification} of these three universe reality responses of cosmic recognition.
+\vs p016 9:1 The cosmic\hyp{}mind\hyp{}endowed, Adjuster\hyp{}indwelt, personal\tunemarkup{pgnexus10}{\linebreak} creature possesses innate recognition\hyp{}realization of energy reality, mind reality, and spirit reality. The will creature is thus equipped to discern the fact, the law, and the love of God. Aside from these three inalienables of human consciousness, all human experience is really subjective except that intuitive realization of validity attaches to the \bibemph{unification} of these three universe reality responses of cosmic recognition.
 \vs p016 9:2 The God\hyp{}discerning mortal is able to sense the unification value of these three cosmic qualities in the evolution of the surviving soul, man’s supreme undertaking in the physical tabernacle where the moral mind collaborates with the indwelling divine spirit to dualize the immortal soul. From its earliest inception the soul is \bibemph{real;} it has cosmic survival qualities.
 \vs p016 9:3 If mortal man fails to survive natural death, the real spiritual values of his human experience survive as a part of the continuing experience of the Thought Adjuster. The personality values of such a nonsurvivor persist as a factor in the personality of the actualizing Supreme Being. Such persisting qualities of personality are deprived of identity but not of experiential values accumulated during the mortal life in the flesh. The survival of identity is dependent on the survival of the immortal soul of morontia status and increasingly divine value. Personality identity survives in and by the survival of the soul.
 \vs p016 9:4 \pc Human self\hyp{}consciousness implies the recognition of the reality of selves other than the conscious self and further implies that such awareness is mutual; that the self is known as it knows. This is shown in a purely human manner in man’s social life. But you cannot become so absolutely certain of a fellow being’s reality as you can of the reality of the presence of God that lives within you. The social consciousness is not inalienable like the God\hyp{}consciousness; it is a cultural development and is dependent on knowledge, symbols, and the contributions of the constitutive endowments of man --- science, morality, and religion. And these cosmic gifts, socialized, constitute civilization.
