--- a/tex/p020.tex
+++ b/tex/p020.tex
@@ -55,7 +55,7 @@
 \usection{Bestowal of the Paradise Sons of God}
 \vs p020 5:1 The Eternal Son is the eternal Word of God. The Eternal Son is the perfect expression of the “first” absolute and infinite thought of his eternal Father. When a personal duplication or divine extension of this Original Son starts on a bestowal mission of mortal incarnation, it becomes literally true that the divine “Word is made flesh,” and that the Word thus dwells among the lowly beings of animal origin.
 \vs p020 5:2 On Urantia there is a widespread belief that the purpose of a Son’s bestowal is, in some manner, to influence the attitude of the Universal Father. But your enlightenment should indicate that this is not true. The bestowals of the Avonal and the Michael Sons are a necessary part of the experiential process designed to make these Sons safe and sympathetic magistrates and rulers of the peoples and planets of time and space. The career of sevenfold bestowal is the supreme goal of all Paradise Creator Sons. And all Magisterial Sons are motivated by this same spirit of service which so abundantly characterizes the primary Creator Sons and the Eternal Son of Paradise.
-\vs p020 5:3 Some order of Paradise Son must be bestowed upon each mortal\hyp{}inhabited world in order to make it possible for Thought Adjusters to indwell the minds of all normal human beings on that sphere, for the Adjusters do not come to \bibemph{all} bona fide human beings until the Spirit of Truth has been poured out upon all flesh; and the sending of the Spirit of Truth is dependent upon the return to universe headquarters of a Paradise Son who has successfully executed a mission of mortal bestowal upon an evolving world.
+\vs p020 5:3 Some order of Paradise Son must be bestowed upon each mortal\hyp{}inhabited world in order to make it possible for\tunemarkup{pgnexus10}{\linebreak} Thought Adjusters to indwell the minds of all normal human beings on that sphere, for the Adjusters do not come to \bibemph{all} bona fide human beings until the Spirit of Truth has been poured out upon all flesh; and the sending of the Spirit of Truth is dependent upon the return to universe headquarters of a Paradise Son who has successfully executed a mission of mortal bestowal upon an evolving world.
 \vs p020 5:4 During the course of the long history of an inhabited planet, many dispensational adjudications will take place, and more than one magisterial mission may occur, but ordinarily only once will a bestowal Son serve on the sphere. It is only required that each inhabited world have one bestowal Son come to live the full mortal life from birth to death. Sooner or later, regardless of spiritual status, every mortal\hyp{}inhabited world is destined to become host to a Magisterial Son on a bestowal mission except the one planet in each local universe whereon a Creator Son elects to make his mortal bestowal.
 \vs p020 5:5 \pc Understanding more about the bestowal Sons, you discern why so much interest attaches to Urantia in the history of Nebadon. Your small and insignificant planet is of local universe concern simply because it is the mortal home world of Jesus of Nazareth. It was the scene of the final and triumphant bestowal of your Creator Son, the arena in which Michael won the supreme personal sovereignty of the universe of Nebadon.
 \vs p020 5:6 At the headquarters of his local universe a Creator Son, especially after the completion of his own mortal bestowal, spends much of his time in counselling and instructing the college of associate Sons, the Magisterial Sons and others. In love and devotion, with tender mercy and affectionate consideration, these Magisterial Sons bestow themselves upon the worlds of space. And in no way are these planetary services inferior to the mortal bestowals of the Michaels. It is true that your Creator Son selected for the realm of his final adventure in creature experience one which had had unusual misfortunes. But no planet could ever be in such a condition that it would require the bestowal of a Creator Son to effect its spiritual rehabilitation. Any Son of the bestowal group would have equally sufficed, for in all their work on the worlds of a local universe the Magisterial Sons are just as divinely effective and all wise as would have been their Paradise brother, the Creator Son.
