--- a/tex/p021.tex
+++ b/tex/p021.tex
@@ -65,7 +65,7 @@
 \vs p021 5:1 The power of a Master Michael is unlimited because derived from experienced association with the Paradise Trinity, is unquestioned because derived from actual experience as the very creatures subject to such authority. The nature of the sovereignty of a sevenfold Creator Son is supreme because it:
 \vs p021 5:2 \ublistelem{1.}\bibnobreakspace Embraces the sevenfold viewpoint of Paradise Deity.
 \vs p021 5:3 \ublistelem{2.}\bibnobreakspace Embodies a sevenfold attitude of time\hyp{}space creatures.
-\vs p021 5:4 \ublistelem{3.}\bibnobreakspace Perfectly synthesizes Paradise attitude and creature viewpoint.
+\vs p021 5:4 \ublistelem{3.}\bibnobreakspace Perfectly synthesizes Paradise attitude and creature\tunemarkup{pgnexus10}{\linebreak} viewpoint.
 \vs p021 5:5 \pc This experiential sovereignty is thus all\hyp{}inclusive of the divinity of God the Sevenfold culminating in the Supreme Being. And the personal sovereignty of a sevenfold Son is like the future sovereignty of the sometime\hyp{}to\hyp{}be\hyp{}completed Supreme Being, embracing as it does the fullest possible content of the power and authority of the Paradise Trinity manifestable within the time\hyp{}space limits concerned.
 \vs p021 5:6 \pc With the achievement of supreme local universe sovereignty, there passes from a Michael Son the power and opportunity to create entirely new types of creature beings during the present universe age. But a Master Son’s loss of power to originate entirely new orders of beings in no way interferes with the work of life elaboration already established and in process of unfoldment; this vast program of universe evolution goes on without interruption or curtailment. The acquirement of supreme sovereignty by a Master Son implies the responsibility of personal devotion to the fostering and the administering of that which has already been designed and created, and of that which will subsequently be produced by those who have been thus designed and created. In time there may develop an almost endless evolution of diverse beings, but no entirely new pattern or type of intelligent creature will henceforth take direct origin from a Master Son. This is the first step, the beginning, of a settled administration in any local universe.
 \vs p021 5:7 The elevation of a sevenfold bestowal Son to the unquestioned sovereignty of his universe means the beginning of the end of agelong uncertainty and relative confusion. Subsequent to this event, that which cannot be sometime spiritualized will eventually be disorganized; that which cannot be sometime co\hyp{}ordinated with cosmic reality will eventually be destroyed. When the provisions of endless mercy and nameless patience have been exhausted in an effort to win the loyalty and devotion of the will creatures of the realms, justice and righteousness will prevail. That which mercy cannot rehabilitate justice will eventually annihilate.
