--- a/tex/p028.tex
+++ b/tex/p028.tex
@@ -87,7 +87,7 @@
 \usection{Ministry of the Seconaphim}
 \vs p028 7:1 The seconaphim have their origin and headquarters on the capitals of the superuniverses, but with their liaison fellows they range from the shores of Paradise to the evolutionary worlds of space. They serve as valued assistants to the members of the deliberative assemblies of the supergovernments and are of great help to the courtesy colonies of Uversa: the star students, millennial tourists, celestial observers, and a host of others, including the ascendant beings in waiting for Havona transport. The Ancients of Days take pleasure in assigning certain of the primary seconaphim to assist the ascending creatures domiciled on the 490 study worlds surrounding Uversa, and here also do many of the secondary and tertiary orders serve as teachers. These Uversa satellites are the finishing schools of the universes of time, presenting the preparatory course for the seven\hyp{}circuited university of Havona.
 \vs p028 7:2 \pc Of the three orders of seconaphim, the tertiary group, attached to the ascendant authorities, minister most extensively to the ascending creatures of time. You will on occasion meet them soon after your departure from Urantia, though you will not freely make use of their services until you reach the tarrying worlds of Orvonton. You will enjoy their companionship when you become fully acquainted with them during your sojourn on the Uversa school worlds.
-\vs p028 7:3 These tertiary seconaphim are the timesavers, space abridgers, error detectors, faithful teachers, and everlasting guideposts --- living signs of divine surety --- in mercy placed at the crossroads of time, there to guide the feet of anxious pilgrims in moments of great perplexity and spiritual uncertainty. Long before attaining the portals of perfection, you will begin to gain access to the tools of divinity and to make contact with the techniques of Deity. Increasingly, from the time you arrive on the initial mansion world until you close your eyes in the Havona sleep preparatory to your Paradise transit, you will avail yourself of the emergency help of these marvellous beings, who are so fully and freely reflective of the sure knowledge and certain wisdom of those safe and dependable pilgrims who have preceded you on the long journey to the portals of perfection.
+\vs p028 7:3 These tertiary seconaphim are the timesavers, space\tunemarkup{pgnexus10}{\linebreak} abridgers, error detectors, faithful teachers, and everlasting guideposts --- living signs of divine surety --- in mercy placed at the crossroads of time, there to guide the feet of anxious pilgrims in moments of great perplexity and spiritual uncertainty. Long before attaining the portals of perfection, you will begin to gain access to the tools of divinity and to make contact with the techniques of Deity. Increasingly, from the time you arrive on the initial mansion world until you close your eyes in the Havona sleep preparatory to your Paradise transit, you will avail yourself of the emergency help of these marvellous beings, who are so fully and freely reflective of the sure knowledge and certain wisdom of those safe and dependable pilgrims who have preceded you on the long journey to the portals of perfection.
 \vs p028 7:4 We are denied the full privilege of using these angels of the reflective order on Urantia. They are frequent visitors on your world, accompanying assigned personalities, but here they cannot freely function. This sphere is still under partial spiritual quarantine, and some of the circuits essential to their services are not here at present. When your world is once more restored to the reflective circuits concerned, much of the work of interplanetary and interuniverse communication will be greatly simplified and expedited. Celestial workers on Urantia encounter many difficulties because of this functional curtailment of their reflective associates. But we go on joyfully conducting our affairs with the instrumentalities at hand, notwithstanding our local deprivation of many of the services of these marvellous beings, the living mirrors of space and the presence projectors of time.
 \vsetoff
 \vs p028 7:5 [Sponsored by a Mighty Messenger of Uversa.]
