--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -78,7 +78,7 @@
 \vs p029 4:21 The Master Physical Controllers often function in batteries of hundreds, thousands, and even millions and by varying their positions and formations are able to effect energy control in a collective as well as an individual capacity. As requirements vary, they can upstep and accelerate the energy volume and movement or detain, condense, and retard the energy currents. They influence energy and power transformations somewhat as so\hyp{}called catalytic agents augment chemical reactions. They function by inherent ability and in co\hyp{}operation with the Supreme Power Centres.
 \vs p029 4:22 \ublistelem{3.}\bibnobreakspace \bibemph{Energy Transformers.} The number of these beings in a superuniverse is unbelievable. There are almost 1,000,000 in Satania alone, and the usual quota is 100 for each inhabited world.
 \vs p029 4:23 The energy transformers are the conjoint creation of the Seven Supreme Power Directors and the Seven Centre Supervisors. They are among the more personal orders of physical controllers, and except when an associate power director is present on an inhabited world, the transformers are in command. They are the planetary inspectors of all departing seraphic transports. All classes of celestial life can utilize the less personal orders of the physical controllers only by liaison with the more personal orders of the associate directors and the energy transformers.\fnc{\ldots{}the Seven Supreme Power Directors and the Seven \bibtextul{Central} Supervisors\ldots{} \bibexpl{There is no other reference to Seven Central Supervisors anywhere in the text but there are multiple references to Seven Centre Supervisors (primary description at \bibref[98:4.1]{p098 4:1}. in the text) who function closely with the Supreme Power Directors and can be very reasonably substituted here for the otherwise unknown Central Supervisors.}}
-\vs p029 4:24 These transformers are powerful and effective living switches, being able to dispose themselves for or against a given power disposition or directionization. They are also skillful in their efforts to insulate the planets against the powerful energy streams passing between gigantic planetary and starry neighbours. Their energy\hyp{}transmutive attributes render them most serviceable in the important task of maintaining universal energy balance, or power equilibrium. At one time they seem to consume or store energy; at other times they appear to exude or liberate energy. The transformers are able to increase or to diminish the “storage\hyp{}battery” potential of the living and dead energies of their respective realms. But they deal only with physical and semimaterial energies, they do not directly function in the domain of life, neither do they change the forms of living beings.
+\vs p029 4:24 These transformers are powerful and effective living\tunemarkup{pgnexus10}{\linebreak} switches, being able to dispose themselves for or against a given power disposition or directionization. They are also skillful in their efforts to insulate the planets against the powerful energy streams passing between gigantic planetary and starry neighbours. Their energy\hyp{}transmutive attributes render them most serviceable in the important task of maintaining universal energy balance, or power equilibrium. At one time they seem to consume or store energy; at other times they appear to exude or liberate energy. The transformers are able to increase or to diminish the “storage\hyp{}battery” potential of the living and dead energies of their respective realms. But they deal only with physical and semimaterial energies, they do not directly function in the domain of life, neither do they change the forms of living beings.
 \vs p029 4:25 In some respects the energy transformers are the most remarkable and mysterious of all semimaterial living creatures. They are in some unknown manner physically differentiated, and by varying their liaison relationships, they are able to exert a profound influence upon the energy which passes through their associated presences. The status of the physical realms seems to undergo a transformation under their skillful manipulation. \bibemph{They can and do change the physical form of the energies of space.} With the aid of their fellow controllers they are actually able to change the form and potential of 27 of the 30 physical energies of the superuniverse power charge. That three of these energies are beyond their control proves that they are not instrumentalities of the Unqualified Absolute.
 \vs p029 4:26 \pc The remaining four groups of the Master Physical Controllers are hardly persons within any acceptable definition of that word. These transmitters, associators, dissociators, and frandalanks are wholly automatic in their reactions; nevertheless they are in every sense intelligent. We are greatly limited in our knowledge of these wonderful entities because we cannot communicate with them. They appear to understand the language of the realm, but they cannot communicate with us. They seem fully able to receive our communications but quite powerless to make response.
 \vs p029 4:27 \ublistelem{4.}\bibnobreakspace \bibemph{Energy Transmitters.} These beings function chiefly, but not wholly, in an intraplanetary capacity. They are marvellous dispatchers of energy as it is manifested on the individual worlds.
