--- a/tex/p032.tex
+++ b/tex/p032.tex
@@ -38,7 +38,7 @@
 \vs p032 3:6 The farther down the scale of life we go, the more difficult it becomes to locate, with the eye of faith, the invisible Father. The lower creatures --- and sometimes even the higher personalities --- find it difficult always to envisage the Universal Father in his Creator Sons. And so, pending the time of their spiritual exaltation, when perfection of development will enable them to see God in person, they grow weary in progression, entertain spiritual doubts, stumble into confusion, and thus isolate themselves from the progressive spiritual aims of their time and universe. In this way they lose the ability to see the Father when beholding the Creator Son. The surest safeguard for the creature throughout the long struggle to attain the Father, during this time when inherent conditions make such attainment impossible, is tenaciously to hold on to the truth\hyp{}fact of the Father’s presence in his Sons. Literally and figuratively, spiritually and personally, the Father and the Sons are one. It is a fact: He who has seen a Creator Son has seen the Father.
 \vs p032 3:7 \pc The personalities of a given universe are settled and dependable, at the start, only in accordance with their degree of kinship to Deity. When creature origin departs sufficiently far from the original and divine Sources, whether we are dealing with the Sons of God or the creatures of ministry belonging to the Infinite Spirit, there is an increase in the possibility of disharmony, confusion, and sometimes rebellion --- sin.
 \vs p032 3:8 \pc Excepting perfect beings of Deity origin, all will creatures in the superuniverses are of evolutionary nature, beginning in lowly estate and climbing ever upward, in reality inward. Even highly spiritual personalities continue to ascend the scale of life by progressive translations from life to life and from sphere to sphere. And in the case of those who entertain the Mystery Monitors, there is indeed no limit to the possible heights of their spiritual ascent and universe attainment.
-\vs p032 3:9 The perfection of the creatures of time, when finally achieved, is wholly an acquirement, a bona fide personality possession. While the elements of grace are freely admixed, nevertheless, the creature attainments are the result of individual effort and actual living, personality reaction to the existing environment.
+\vs p032 3:9 The perfection of the creatures of time, when finally\tunemarkup{pgnexus10}{\linebreak} achieved, is wholly an acquirement, a bona fide personality possession. While the elements of grace are freely admixed, nevertheless, the creature attainments are the result of individual effort and actual living, personality reaction to the existing environment.
 \vs p032 3:10 The fact of animal evolutionary origin does not attach stigma to any personality in the sight of the universe as that is the exclusive method of producing one of the two basic types of finite intelligent will creatures. When the heights of perfection and eternity are attained, all the more honour to those who began at the bottom and joyfully climbed the ladder of life, round by round, and who, when they do reach the heights of glory, will have gained a personal experience which embodies an actual knowledge of every phase of life from the bottom to the top.
 \vs p032 3:11 In all this is shown the wisdom of the Creators. It would be just as easy for the Universal Father to make all mortals perfect beings, to impart perfection by his divine word. But that would deprive them of the wonderful experience of the adventure and training associated with the long and gradual inward climb, an experience to be had only by those who are so fortunate as to begin at the very bottom of living existence.
 \vs p032 3:12 In the universes encircling Havona there are provided only a sufficient number of perfect creatures to meet the need for pattern teacher guides for those who are ascending the evolutionary scale of life. The experiential nature of the evolutionary type of personality is the natural cosmic complement of the ever\hyp{}perfect natures of the Paradise\hyp{}Havona creatures. In reality, both perfect and perfected creatures are incomplete as regards finite totality. But in the complemental association of the existentially perfect creatures of the Paradise\hyp{}Havona system with the experientially perfected finaliters ascending from the evolutionary universes, both types find release from inherent limitations and thus may conjointly attempt to reach the sublime heights of the ultimate of creature status.
