--- a/tex/p038.tex
+++ b/tex/p038.tex
@@ -27,17 +27,17 @@
 \vs p038 3:1 Numerous orders of spirit beings function throughout the domains of the local universe that are unrevealed to mortals because they are in no manner connected with the evolutionary plan of Paradise ascension. In this paper the word “angel” is purposely limited to the designation of those seraphic and associated offspring of the Universe Mother Spirit who are so largely concerned with the operation of the plans of mortal survival. There serve in the local universe six other orders of related beings, the unrevealed angels, who are not in any specific manner connected with those universe activities pertaining to the Paradise ascent of evolutionary mortals. These six groups of angelic associates are never called seraphim, neither are they referred to as ministering spirits. These personalities are wholly occupied with the administrative and other affairs of Nebadon, engagements which are in no way related to man’s progressive career of spiritual ascent and perfection attainment.
 \usection{The Seraphic Worlds}
 \vs p038 4:1 The 9\ts{th} group of 7 primary spheres in the Salvington circuit are the worlds of the seraphim. Each of these worlds has 6 tributary satellites, whereon are the special schools devoted to all phases of seraphic training. While the seraphim have access to all 49 worlds comprising this group of Salvington spheres, they exclusively occupy only the 1\ts{st} cluster of 7. The remaining 6 clusters are occupied by the 6 orders of angelic associates unrevealed on Urantia; each such group maintains headquarters on one of these 6 primary worlds and carries on specialized activities on the 6 tributary satellites. Each angelic order has free access to all the worlds of these 7 diverse groups.
-\vs p038 4:2 These headquarters worlds are among the magnificent realms of Nebadon; the seraphic estates are characterized by both beauty and vastness. Here each seraphim has a real home, and “home” means the domicile of two seraphim; they live in pairs.
+\vs p038 4:2 These headquarters worlds are among the magnificent\tunemarkup{pgnexus10}{\linebreak} realms of Nebadon; the seraphic estates are characterized by both beauty and vastness. Here each seraphim has a real home, and “home” means the domicile of two seraphim; they live in pairs.
 \vs p038 4:3 \pc Though not male and female as are the Material Sons and the mortal races, seraphim are negative and positive. In the majority of assignments it requires two angels to accomplish the task. When they are not encircuited, they can work alone; neither do they require complements of being when stationary. Ordinarily they retain their original complements of being, but not necessarily. Such associations are primarily necessitated by function; they are not characterized by sex emotion, though they are exceedingly personal and truly affectionate.
 \vs p038 4:4 Besides designated homes, seraphim also have group, company, battalion, and unit headquarters. They forgather for reunions every millennium and are all present in accordance with the time of their creation. If a seraphim bears responsibilities which forbid absence from duty, she alternates attendance with her complement, being relieved by a seraphim of another birth date. Each seraphic partner is thereby present at least every other reunion.
 \usection{Seraphic Training}
-\vs p038 5:1 Seraphim spend their first millennium as noncommissioned observers on Salvington and its associated world schools. The second millennium is spent on the seraphic worlds of the Salvington circuit. Their central training school is now presided over by the 1\ts{st} 100,000 Nebadon seraphim, and at their head is the original or first\hyp{}born angel of this local universe. The first created group of Nebadon seraphim were trained by a corps of 1,000 seraphim from Avalon; subsequently our angels have been taught by their own seniors. The Melchizedeks also have a large part in the education and training of all local universe angels --- seraphim, cherubim, and sanobim.
+\vs p038 5:1 Seraphim spend their first millennium as noncommissioned observers on Salvington and its associated world schools. The second millennium is spent on the seraphic worlds of the Salvington circuit. Their central training school is now presided over by the first 100,000 Nebadon seraphim, and at their head is the original or first\hyp{}born angel of this local universe. The first created group of Nebadon seraphim were trained by a corps of 1,000 seraphim from Avalon; subsequently our angels have been taught by their own seniors. The Melchizedeks also have a large part in the education and training of all local universe angels --- seraphim, cherubim, and sanobim.
 \vs p038 5:2 At the termination of this period of training on the seraphic worlds of Salvington, seraphim are mobilized in the conventional groups and units of the angelic organization and are assigned to some one of the constellations. They are not yet commissioned as ministering spirits, although they have well entered upon the precommissioned phases of angelic training.
 \vs p038 5:3 Seraphim are initiated as ministering spirits by serving as observers on the lowest of the evolutionary worlds. After this experience they return to the associate worlds of the headquarters of the assigned constellation to begin their advanced studies and more definitely to prepare for service in some particular local system. Following this general education they are advanced to the service of some one of the local systems. On the architectural worlds associated with the capital of some Nebadon system our seraphim complete their training and are commissioned as ministering spirits of time.
 \vs p038 5:4 When once seraphim are commissioned, they may range all Nebadon, even Orvonton, on assignment. Their work in the universe is without bounds and limitations; they are closely associated with the material creatures of the worlds and are ever in the service of the lower orders of spiritual personalities, making contact between these beings of the spirit world and the mortals of the material realms.
 \usection{Seraphic Organization}
 \vs p038 6:1 After the second millennium of sojourn at seraphic headquarters the seraphim are organized under chiefs into groups of 12 (12 pairs, 24 seraphim), and 12 such groups constitute a company (144 pairs, 288 seraphim), which is commanded by a leader. Twelve companies under a commander constitute a battalion (1,728 pairs or 3,456 seraphim), and 12 battalions under a director equal a seraphic unit (20,736 pairs or 41,472 individuals), while 12 units, subject to the command of a supervisor, constitute a legion numbering 248,832 pairs or 497,664 individuals. Jesus alluded to such a group of angels that night in the garden of Gethsemane when he said: “I can even now ask my Father, and he will presently give me more than 12 legions of angels.”
-\vs p038 6:2 Twelve legions of angels comprise a host numbering 2,985,984 pairs or 5,971,968 individuals, and 12 such hosts (35,831,808 pairs or 71,663,616 individuals) make up the largest operating organization of seraphim, an angelic army. A seraphic host is commanded by an archangel or by some other personality of co\hyp{}ordinate status, while the angelic armies are directed by the Brilliant Evening Stars or by other immediate lieutenants of Gabriel. And Gabriel is the “supreme commander of the armies of heaven,” the chief executive of the Sovereign of Nebadon, “the Lord God of hosts.”
+\vs p038 6:2 Twelve legions of angels comprise a host numbering\tunemarkup{pgnexus10}{\linebreak} 2,985,984 pairs or 5,971,968 individuals, and 12 such hosts (35,831,808 pairs or 71,663,616 individuals) make up the largest operating organization of seraphim, an angelic army. A seraphic host is commanded by an archangel or by some other personality of co\hyp{}ordinate status, while the angelic armies are directed by the Brilliant Evening Stars or by other immediate lieutenants of Gabriel. And Gabriel is the “supreme commander of the armies of heaven,” the chief executive of the Sovereign of Nebadon, “the Lord God of hosts.”
 \vs p038 6:3 Though serving under the direct supervision of the Infinite Spirit as personalized on Salvington, since the bestowal of Michael on Urantia, seraphim and all other local universe orders have become subject to the sovereignty of the Master Son. Even when Michael was born of the flesh on Urantia, there issued the superuniverse broadcast to all Nebadon which proclaimed, “And let all the angels worship him.” All ranks of angels are subject to his sovereignty; they are a part of that group which has been denominated “his mighty angels.”
 \usection{Cherubim and Sanobim}
 \vs p038 7:1 In all essential endowments cherubim and sanobim are similar to seraphim. They have the same origin but not always the same destiny. They are wonderfully intelligent, marvellously efficient, touchingly affectionate, and almost human. They are the lowest order of angels, hence all the nearer of kin to the more progressive types of human beings on the evolutionary worlds.
