--- a/tex/p039.tex
+++ b/tex/p039.tex
@@ -62,7 +62,7 @@
 \vs p039 3:1 This versatile order of universe angels is assigned to the exclusive service of the constellations. These able ministers make their headquarters on the constellation capitals but function throughout all Nebadon in the interests of their assigned realms.
 \vs p039 3:2 \ublistelem{1.}\bibnobreakspace \bibemph{Supervising Assistants.} The first order of the supervising seraphim are assigned to the collective work of the Constellation Fathers, and they are the ever\hyp{}efficient helpers of the Most Highs. These seraphim are primarily concerned with the unification and stabilization of a whole constellation.
 \vs p039 3:3 \ublistelem{2.}\bibnobreakspace \bibemph{Law Forecasters.} The intellectual foundation of justice is law, and in a local universe law originates in the legislative assemblies of the constellations. These deliberative bodies codify and formally promulgate the basic laws of Nebadon, laws designed to afford the greatest possible co\hyp{}ordination of a whole constellation consistent with the fixed policy of noninfringement of the moral free will of personal creatures. It is the duty of the second order of supervisor seraphim to place before the constellation lawmakers a forecast of how any proposed enactment would affect the lives of freewill creatures. This service they are well qualified to perform by virtue of long experience in the local systems and on the inhabited worlds. These seraphim seek no special favours for one group or another, but they do appear before the celestial lawmakers to speak for those who cannot be present to speak for themselves. Even mortal man may contribute to the evolution of universe law, for these very seraphim do faithfully and fully portray, not necessarily man’s transient and conscious desires, but rather the true longings of the inner man, the evolving morontia soul of the material mortal on the worlds of space.
-\vs p039 3:4 \ublistelem{3.}\bibnobreakspace \bibemph{Social Architects.} From the individual planets up through the morontia training worlds, these seraphim labour to enhance all sincere social contacts and to further the social evolution of universe creatures. These are the angels who seek to divest the associations of intelligent beings of all artificiality while endeavouring to facilitate the interassociation of will creatures on a basis of real self\hyp{}understanding and genuine mutual appreciation.
+\vs p039 3:4 \ublistelem{3.}\bibnobreakspace \bibemph{Social Architects.} From the individual planets up\tunemarkup{pgnexus10}{\linebreak} through the morontia training worlds, these seraphim labour to enhance all sincere social contacts and to further the social evolution of universe creatures. These are the angels who seek to divest the associations of intelligent beings of all artificiality while endeavouring to facilitate the interassociation of will creatures on a basis of real self\hyp{}understanding and genuine mutual appreciation.
 \vs p039 3:5 Social architects do everything within their province and power to bring together suitable individuals that they may constitute efficient and agreeable working groups on earth; and sometimes such groups have found themselves reassociated on the mansion worlds for continued fruitful service. But not always do these seraphim attain their ends; not always are they able to bring together those who would form the most ideal group to achieve a given purpose or to accomplish a certain task; under these conditions they must utilize the best of the material available.
 \vs p039 3:6 These angels continue their ministry on the mansion and higher morontia worlds. They are concerned with any undertaking having to do with progress on the morontia worlds and which concerns three or more persons. Two beings are regarded as operating on the mating, complemental, or partnership basis, but when three or more are grouped for service, they constitute a social problem and therefore fall within the jurisdiction of the social architects. These efficient seraphim are organized in 70 divisions on Edentia, and these divisions minister on the 70 morontia progress worlds encircling the headquarters sphere.
 \vs p039 3:7 \ublistelem{4.}\bibnobreakspace \bibemph{Ethical Sensitizers.} It is the mission of these seraphim to foster and to promote the growth of creature appreciation of the morality of interpersonal relationships, for such is the seed and secret of the continued and purposeful growth of society and government, human or superhuman. These enhancers of ethical appreciation function anywhere and everywhere they may be of service, as volunteer counsellors to the planetary rulers and as exchange teachers on the system training worlds. You will not, however, come under their full guidance until you reach the brotherhood schools on Edentia, where they will quicken your appreciation of those very truths of fraternity which you will even then be so earnestly exploring by the actual experience of living with the univitatia in the social laboratories of Edentia, the 70 satellites of the Norlatiadek capital.
