--- a/tex/p040.tex
+++ b/tex/p040.tex
@@ -23,7 +23,7 @@
 \vs p040 0:11 Since the greater part of this narrative will be devoted to a discussion of the three basic orders of ascending mortals, consideration will first be given to the nonmortal ascending orders of sonship --- seraphic, Adamic, midwayer, and Adjuster.
 \usection{Evolutionary Seraphim}
 \vs p040 1:1 Mortal creatures of animal origin are not the only beings privileged to enjoy sonship; the angelic hosts also share the supernal opportunity to attain Paradise. Guardian seraphim, through experience and service with the ascending mortals of time, also achieve the status of ascendant sonship. Such angels attain Paradise through Seraphington, and many are even mustered into the Corps of Mortal Finality.
-\vs p040 1:2 To climb to the supernal heights of finaliter sonship with God is a masterly achievement for an angel, an accomplishment far transcending your attainment of eternal survival through the plan of the Eternal Son and the ever\hyp{}present help of the indwelling Adjuster; but the guardian seraphim, and occasionally others, do actually effect such ascensions.
+\vs p040 1:2 To climb to the supernal heights of finaliter sonship with God is a masterly achievement for an angel, an accomplishment far transcending your attainment of eternal survival\tunemarkup{pgnexus10}{\linebreak} through the plan of the Eternal Son and the ever\hyp{}present help of the indwelling Adjuster; but the guardian seraphim, and occasionally others, do actually effect such ascensions.
 \usection{Ascending Material Sons}
 \vs p040 2:1 The Material Sons of God are created in the local universe along with the Melchizedeks and their associates, who are all classified as descending Sons. And indeed, the Planetary Adams --- the Material Sons and Daughters of the evolutionary worlds --- are descending Sons, coming down to the inhabited worlds from their spheres of origin, the capitals of the local systems.
 \vs p040 2:2 When such an Adam and Eve are wholly successful in their joint planetary mission as biologic uplifters, they share the destiny of the inhabitants of their world. When such a world is settled in the advanced stages of light and life, this faithful Material Son and Daughter are permitted to resign all planetary administrative duties, and after being thus liberated from the descending adventure, they are permitted to register themselves as perfected Material Sons on the records of the local universe. Likewise, when planetary assignment is long delayed, may the Material Sons of stationary status --- the citizens of the local systems --- withdraw from the activities of their status spheres and similarly register as perfected Material Sons. After these formalities such liberated Adams and Eves are accredited as ascending Sons of God and may immediately begin the long journey to Havona and Paradise, starting at the exact point of their then present status and spiritual attainment. And they make this journey in company with the mortal and other ascending Sons, continuing until they have found God and have achieved the Corps of Mortal Finality in the eternal service of the Paradise Deities.
