--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -22,7 +22,7 @@
 \vs p041 1:5 One Supreme Power Centre of the sixth order is stationed at the exact gravity focus of each local system. In the system of Satania the assigned power centre occupies a dark island of space located at the astronomic centre of the system. Many of these dark islands are vast dynamos which mobilize and directionize certain space\hyp{}energies, and these natural circumstances are effectively utilized by the Satania Power Centre, whose living mass functions as a liaison with the higher centres, directing the streams of more materialized power to the Master Physical Controllers on the evolutionary planets of space.
 \usection{The Satania Physical Controllers}
 \vs p041 2:1 While the Master Physical Controllers serve with the power centres throughout the grand universe, their functions in a local system, such as Satania, are more easy of comprehension. Satania is one of 100 local systems which make up the administrative organization of the constellation of Norlatiadek, having as immediate neighbours the systems of Sandmatia, Assuntia, Porogia, Sortoria, Rantulia, and Glantonia. The Norlatiadek systems differ in many respects, but all are evolutionary and progressive, very much like Satania.
-\vs p041 2:2 Satania itself is composed of over 7,000 astronomical groups, or physical systems, few of which had an origin similar to that of your solar system. The astronomic centre of Satania is an enormous dark island of space which, with its attendant spheres, is situated not far from the headquarters of the system government.
+\vs p041 2:2 Satania itself is composed of over 7,000 astronomical\tunemarkup{pgnexus10}{\linebreak} groups, or physical systems, few of which had an origin similar to that of your solar system. The astronomic centre of Satania is an enormous dark island of space which, with its attendant spheres, is situated not far from the headquarters of the system government.
 \vs p041 2:3 \pc Except for the presence of the assigned power centre, the supervision of the entire physical\hyp{}energy system of Satania is centred on Jerusem. A Master Physical Controller, stationed on this headquarters sphere, works in co\hyp{}ordination with the system power centre, serving as liaison chief of the power inspectors headquartered on Jerusem and functioning throughout the local system.
 \vs p041 2:4 The circuitizing and channelizing of energy is supervised by the 500,000 living and intelligent energy manipulators scattered throughout Satania. Through the action of such physical controllers the supervising power centres are in complete and perfect control of a majority of the basic energies of space, including the emanations of highly heated orbs and the dark energy\hyp{}charged spheres. This group of living entities can mobilize, transform, transmute, manipulate, and transmit nearly all of the physical energies of organized space.
 \vs p041 2:5 Life has inherent capacity for the mobilization and transmutation of universal energy. You are familiar with the action of vegetable life in transforming the material energy of light into the varied manifestations of the vegetable kingdom. You also know something of the method whereby this vegetative energy can be converted into the phenomena of animal activities, but you know practically nothing of the technique of the power directors and the physical controllers, who are endowed with ability to mobilize, transform, directionize, and concentrate the manifold energies of space.
