--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -1,6 +1,6 @@
 \upaper{42}{Energy --- Mind and Matter}
 \uminitoc{Paradise Forces and Energies}
-\uminitoc{Universal Nonspiritual Energy Systems (\subtitlefont Physical En...}
+\uminitoc{Universal Nonspiritual Energy Systems}
 \uminitoc{Classification of Matter}
 \uminitoc{Energy and Matter Transmutations}
 \uminitoc{Wave-Energy Manifestations}
@@ -8,10 +8,10 @@
 \uminitoc{Atomic Matter}
 \uminitoc{Atomic Cohesion}
 \uminitoc{Natural Philosophy}
-\uminitoc{Universal Nonspiritual Energy Systems (\subtitlefont Material Mi...}
+\uminitoc{Universal Nonspiritual Energy Systems}
 \uminitoc{Universe Mechanisms}
 \uminitoc{Pattern and Form --- Mind Dominance}
-\author{Mighty Messenger\ts{*}}\footnotetext{\textbf{Mighty Messenger}, Human sources: A.S.~Eddington ``Stars and Atoms'', J.~Jeans ``The Universe Around Us'' (1930) and ``Through Space and Time'' (1934), W.F.G.~Swann ``The Architecture of the Universe'' (1934).}
+\author{Mighty Messenger}
 \vs p042 0:1 The foundation of the universe is material in the sense that energy is the basis of all existence, and pure energy is controlled by the Universal Father. Force, energy, is the one thing which stands as an everlasting monument demonstrating and proving the existence and presence of the Universal Absolute. This vast stream of energy proceeding from the Paradise Presences has never lapsed, never failed; there has never been a break in the infinite upholding.
 \vs p042 0:2 The manipulation of universe energy is ever in accordance with the personal will and the all\hyp{}wise mandates of the Universal Father. This personal control of manifested power and circulating energy is modified by the co\hyp{}ordinate acts and decisions of the Eternal Son, as well as by the united purposes of the Son and the Father executed by the Conjoint Actor. These divine beings act personally and as individuals; they also function in the persons and powers of an almost unlimited number of subordinates, each variously expressive of the eternal and divine purpose in the universe of universes. But these functional and provisional modifications or transmutations of divine power in no way lessen the truth of the statement that all force\hyp{}energy is under the ultimate control of a personal God resident at the centre of all things.
 \usection{Paradise Forces and Energies}
@@ -98,7 +98,7 @@
 \vs p042 6:1 While the space charge of universal force is homogeneous and undifferentiated, the organization of evolved energy into matter entails the concentration of energy into discrete masses of definite dimensions and established weight --- precise gravity reaction.
 \vs p042 6:2 Local or linear gravity becomes fully operative with the appearance of the atomic organization of matter. Preatomic matter becomes slightly gravity responsive when activated by X\hyp{}ray and other similar energies, but no measurable linear\hyp{}gravity pull is exerted on free, unattached, and uncharged electronic\hyp{}energy particles or on unassociated ultimatons.
 \vs p042 6:3 \pc Ultimatons function by mutual attraction, responding only to the circular Paradise\hyp{}gravity pull. Without linear\hyp{}gravity response they are thus held in the universal space drift. Ultimatons are capable of accelerating revolutionary velocity to the point of partial antigravity behaviour, but they cannot, independent of force organizers or power directors, attain the critical escape velocity of deindividuation, return to the puissant\hyp{}energy stage. In nature, ultimatons escape the status of physical existence only when participating in the terminal disruption of a cooled\hyp{}off and dying sun.
-\vs p042 6:4 \pc The ultimatons, unknown on Urantia, slow down through many phases of physical activity before they attain the revolutionary\hyp{}energy prerequisites to electronic organization. Ultimatons have three varieties of motion: mutual resistance to cosmic force, individual revolutions of antigravity potential, and the intraelectronic positions of the 100 mutually interassociated ultimatons.
+\vs p042 6:4 \pc The ultimatons, unknown on Urantia, slow down\tunemarkup{pgnexus10}{\linebreak} through many phases of physical activity before they attain the revolutionary\hyp{}energy prerequisites to electronic organization. Ultimatons have three varieties of motion: mutual resistance to cosmic force, individual revolutions of antigravity potential, and the intraelectronic positions of the 100 mutually interassociated ultimatons.
 \vs p042 6:5 Mutual attraction holds 100 ultimatons together in the constitution of the electron; and there are never more nor less than 100 ultimatons in a typical electron. The loss of one or more ultimatons destroys typical electronic identity, thus bringing into existence one of the 10 modified forms of the electron.
 \vs p042 6:6 Ultimatons do not describe orbits or whirl about in circuits within the electrons, but they do spread or cluster in accordance with their axial revolutionary velocities, thus determining the differential electronic dimensions. This same ultimatonic velocity of axial revolution also determines the negative or positive reactions of the several types of electronic units. The entire segregation and grouping of electronic matter, together with the electric differentiation of negative and positive bodies of energy\hyp{}matter, result from these various functions of the component ultimatonic interassociation.
 \vs p042 6:7 \pc Each atom is a trifle over $2.54 \times 10^{-8}$\,cm\fnst{$2.54 \times 10^{-8}$\,cm, i.e. about 4.8 times greater than the value of \bibemph{Bohr radius} $a=5.29\times 10^{-9}$\,cm.} in diameter, while an electron weighs a little less than 1/2,000\ts{th} of the smallest atom, hydrogen. The positive proton, characteristic of the atomic nucleus, while it may be no larger than a negative electron, weighs from 2,000 to 3,000 times more.
@@ -164,3 +164,21 @@
 \vsetoff
 \vs p042 12:16 [Presented by a Mighty Messenger on duty in Nebadon and by the request of Gabriel.]
 \quizlink
+\begin{thebibliography}{100}
+\bibitem{Eddington1}
+A.S.~Eddington
+{``Stars and Atoms''}
+{\em Oxford: Clarendon Press}, 1927.
+\bibitem{Jeans1}
+J.~Jeans.
+{``Through Space and Time''}
+{\em Cambridge: University Press}, 1934.
+\bibitem{Jeans2}
+J.~Jeans.
+{``The Universe Around Us''}
+{\em Cambridge: University Press}, 1930.
+\bibitem{Swann1}
+W.F.G.~Swann.
+{``The Architecture of the Universe''}
+{\em New York: The Macmillan Company}, 1934.
+\end{thebibliography}
