--- a/tex/p052.tex
+++ b/tex/p052.tex
@@ -90,7 +90,7 @@
 \vs p052 7:5 \pc Life during this era is pleasant and profitable. Degeneracy and the antisocial end products of the long evolutionary struggle have been virtually obliterated. The length of life approaches 500 Urantia years, and the reproductive rate of racial increase is intelligently controlled. An entirely new order of society has arrived. There are still great differences among mortals, but the state of society more nearly approaches the ideals of social brotherhood and spiritual equality. Representative government is vanishing, and the world is passing under the rule of individual self\hyp{}control. The function of government is chiefly directed to collective tasks of social administration and economic co\hyp{}ordination. The golden age is coming on apace; the temporal goal of the long and intense planetary evolutionary struggle is in sight. The reward of the ages is soon to be realized; the wisdom of the Gods is about to be manifested.
 \vs p052 7:6 The physical administration of a world during this age requires about one hour each day on the part of every adult individual; that is, the equivalent of one Urantia hour. The planet is in close touch with universe affairs, and its people scan the latest broadcasts with the same keen interest you now manifest in the latest editions of your daily newspapers. These races are occupied with a thousand things of interest unknown on your world.
 \vs p052 7:7 \pc Increasingly, true planetary allegiance to the Supreme Being grows. Generation after generation, more and more of the race step into line with those who practise justice and live mercy. Slowly but surely the world is being won to the joyous service of the Sons of God. The physical difficulties and material problems have been largely solved; the planet is ripening for advanced life and a more settled existence.
-\vs p052 7:8 \pc From time to time throughout their dispensation, Teacher Sons continue to come to these peaceful worlds. They do not leave a world until they observe that the evolutionary plan, as it concerns that planet, is working smoothly. A Magisterial Son of judgment usually accompanies the Teacher Sons on their successive missions, while another such Son functions at the time of their departure, and these judicial actions continue from age to age throughout the duration of the mortal regime of time and space.
+\vs p052 7:8 \pc From time to time throughout their dispensation, Teach\-er Sons continue to come to these peaceful worlds. They do not leave a world until they observe that the evolutionary plan, as it concerns that planet, is working smoothly. A Magisterial Son of judgment usually accompanies the Teacher Sons on their successive missions, while another such Son functions at the time of their departure, and these judicial actions continue from age to age throughout the duration of the mortal regime of time and space.
 \vs p052 7:9 Each recurring mission of the Trinity Teacher Sons successively exalts such a supernal world to ever\hyp{}ascending heights of wisdom, spirituality, and cosmic illumination. But the noble natives of such a sphere are still finite and mortal. Nothing is perfect; nevertheless, there is evolving a quality of near perfection in the operation of an imperfect world and in the lives of its human inhabitants.
 \vs p052 7:10 \pc The Trinity Teacher Sons may return many times to the same world. But sooner or later, in connection with the termination of one of their missions, the Planetary Prince is elevated to the position of Planetary Sovereign, and the System Sovereign appears to proclaim the entrance of such a world upon the era of light and life.
 \vs p052 7:11 It was of the conclusion of the terminal mission of the Teacher Sons (at least that would be the chronology on a normal world) that John wrote: “I saw a new heaven and a new earth and the new Jerusalem coming down from God out of heaven, prepared as a princess adorned for the prince.”
