--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -1,10 +1,10 @@
 \upaper{59}{The Marine\hyp{}Life Era on Urantia}
-\uminitoc{Early Marine Life in the Shallow Seas The Trilobite Age}
-\uminitoc{The First Continental Flood Stage The Invertebrate-Animal Age}
-\uminitoc{The Second Great Flood Stage The Coral Period --- The Brachiopod...}
-\uminitoc{The Great Land-Emergence Stage The Vegetative Land-Life Period T...}
-\uminitoc{The Crustal-Shifting Stage The Fern-Forest Carboniferous Period ...}
-\uminitoc{The Climatic Transition Stage The Seed-Plant Period The Age of B...}
+\uminitoc{Early Marine Life in the Shallow Seas}
+\uminitoc{The Invertebrate\hyp{}Animal Age}
+\uminitoc{The Coral Period}
+\uminitoc{The Vegetative Land\hyp{}Life Period}
+\uminitoc{The Fern\hyp{}Forest Carboniferous Period}
+\uminitoc{The Seed\hyp{}Plant Period}
 \author{Life Carrier}
 \vs p059 0:1 We reckon the history of Urantia as beginning about one billion years ago and extending through five major eras:
 \vs p059 0:2 \ublistelem{1.}\bibnobreakspace \bibemph{The prelife era} extends over the initial 450,000,000 years, from about the time the planet attained its present size to the time of life establishment. Your students have designated this period as the \bibemph{Archeozoic.}
