--- a/tex/p060.tex
+++ b/tex/p060.tex
@@ -1,7 +1,7 @@
 \upaper{60}{Urantia During the Early Land\hyp{}Life Era}
 \uminitoc{The Early Reptilian Age}
 \uminitoc{The Later Reptilian Age}
-\uminitoc{The Cretaceous Stage The Flowering-Plant Period The Age of Birds...}
+\uminitoc{The Flowering\hyp{}Plant Period}
 \uminitoc{The End of the Chalk Period}
 \author{Life Carrier}
 \vs p060 0:1 The era of exclusive marine life has ended. Land elevation, cooling crust and cooling oceans, sea restriction and consequent deepening, together with a great increase of land in northern latitudes, all conspired greatly to change the world’s climate in all regions far removed from the equatorial zone.
