--- a/tex/p061.tex
+++ b/tex/p061.tex
@@ -1,15 +1,15 @@
 \upaper{61}{The Mammalian Era on Urantia}
-\uminitoc{The New Continental Land Stage The Age of Early Mammals}
-\uminitoc{The Recent Flood Stage The Age of Advanced Mammals}
-\uminitoc{The Modern Mountain Stage Age of the Elephant and the Horse}
-\uminitoc{The Recent Continental-Elevation Stage The Last Great Mammalian ...}
+\uminitoc{The Age of Early Mammals}
+\uminitoc{The Age of Advanced Mammals}
+\uminitoc{The Age of the Elephant and the Horse}
+\uminitoc{The Last Great Mammalian Migration}
 \uminitoc{The Early Ice Age}
 \uminitoc{Primitive Man in the Ice Age}
 \uminitoc{The Continuing Ice Age}
 \author{Life Carrier}
 \vs p061 0:1 The era of mammals extends from the times of the origin of placental mammals to the end of the ice age, covering a little less than 50,000,000 years.
 \vs p061 0:2 During this Cenozoic age the world’s landscape presented an attractive appearance --- rolling hills, broad valleys, wide rivers, and great forests. Twice during this sector of time the Panama Isthmus went up and down; three times the Bering Strait land bridge did the same. The animal types were both many and varied. The trees swarmed with birds, and the whole world was an animal paradise, notwithstanding the incessant struggle of the evolving animal species for supremacy.
-\vs p061 0:3 The accumulated deposits of the five periods of this 50,000,000\hyp{}year era contain the fossil records of the successive mammalian dynasties and lead right up through the times of the actual appearance of man himself.
+\vs p061 0:3 The accumulated deposits of the five periods of this\tunemarkup{pgnexus10}{\linebreak} 50,000,000\hyp{}year era contain the fossil records of the successive mammalian dynasties and lead right up through the times of the actual appearance of man himself.
 \usection{The New Continental Land Stage\\The Age of Early Mammals}
 \vs p061 1:1 \bibemph{50,000,000} years ago the land areas of the world were very generally above water or only slightly submerged. The formations and deposits of this period are both land and marine, but chiefly land. For a considerable time the land gradually rose but was simultaneously washed down to the lower levels and toward the seas.
 \vs p061 1:2 Early in this period and in North America the placental type of mammals \bibemph{suddenly} appeared, and they constituted the most important evolutionary development up to this time. Previous orders of nonplacental mammals had existed, but this new type sprang directly and \bibemph{suddenly} from the pre\hyp{}existent reptilian ancestor whose descendants had persisted on down through the times of dinosaur decline. The father of the placental mammals was a small, highly active, carnivorous, springing type of dinosaur.
