--- a/tex/p068.tex
+++ b/tex/p068.tex
@@ -55,7 +55,7 @@
 \vs p068 5:9 \ublistelem{4.}\bibnobreakspace \bibemph{The agricultural stage.} This era was brought about by the domestication of plants, and it represents the highest type of material civilization. Both Caligastia and Adam endeavoured to teach horticulture and agriculture. Adam and Eve were gardeners, not shepherds, and gardening was an advanced culture in those days. The growing of plants exerts an ennobling influence on all races of mankind.
 \vs p068 5:10 Agriculture more than quadrupled the land\hyp{}man ratio of the world. It may be combined with the pastoral pursuits of the former cultural stage. When the three stages overlap, men hunt and women till the soil.
 \vs p068 5:11 There has always been friction between the herders and the tillers of the soil. The hunter and herder were militant, warlike; the agriculturist is a more peace\hyp{}loving type. Association with animals suggests struggle and force; association with plants instils patience, quiet, and peace. Agriculture and industrialism are the activities of peace. But the weakness of both, as world social activities, is that they lack excitement and adventure.
-\vs p068 5:12 \pc Human society has evolved from the hunting stage through that of the herders to the territorial stage of agriculture. And each stage of this progressive civilization was accompanied by less and less of nomadism; more and more man began to live at home.
+\vs p068 5:12 \pc Human society has evolved from the hunting stage\tunemarkup{pgnexus10}{\linebreak} through that of the herders to the territorial stage of agriculture. And each stage of this progressive civilization was accompanied by less and less of nomadism; more and more man began to live at home.
 \vs p068 5:13 And now is industry supplementing agriculture, with consequently increased urbanization and multiplication of nonagricultural groups of citizenship classes. But an industrial era cannot hope to survive if its leaders fail to recognize that even the highest social developments must ever rest upon a sound agricultural basis.
 \usection{Evolution of Culture}
 \vs p068 6:1 Man is a creature of the soil, a child of nature; no matter how earnestly he may try to escape from the land, in the last reckoning he is certain to fail. “Dust you are and to dust shall you return” is literally true of all mankind. The basic struggle of man was, and is, and ever shall be, for land. The first social associations of primitive human beings were for the purpose of winning these land struggles. The land\hyp{}man ratio underlies all social civilization.
