--- a/tex/p070.tex
+++ b/tex/p070.tex
@@ -136,7 +136,7 @@
 \vs p070 8:13 \pc Flexible and shifting social classes are indispensable to an evolving civilization, but when \bibemph{class} becomes \bibemph{caste,} when social levels petrify, the enhancement of social stability is purchased by diminishment of personal initiative. Social caste solves the problem of finding one’s place in industry, but it also sharply curtails individual development and virtually prevents social co\hyp{}operation.
 \vs p070 8:14 Classes in society, having naturally formed, will persist until man gradually achieves their evolutionary obliteration through intelligent manipulation of the biologic, intellectual, and spiritual resources of a progressing civilization, such as:
 \vs p070 8:15 \ublistelem{1.}\bibnobreakspace Biologic renovation of the racial stocks --- the selective elimination of inferior human strains. This will tend to eradicate many mortal inequalities.
-\vs p070 8:16 \ublistelem{2.}\bibnobreakspace Educational training of the increased brain power which will arise out of such biologic improvement.
+\vs p070 8:16 \ublistelem{2.}\bibnobreakspace Educational training of the increased brain power\tunemarkup{pgnexus10}{\linebreak} which will arise out of such biologic improvement.
 \vs p070 8:17 \ublistelem{3.}\bibnobreakspace Religious quickening of the feelings of mortal kinship and brotherhood.
 \vs p070 8:18 \pc But these measures can bear their true fruits only in the distant millenniums of the future, although much social improvement will immediately result from the intelligent, wise, and \bibemph{patient} manipulation of these acceleration factors of cultural progress. Religion is the mighty lever that lifts civilization from chaos, but it is powerless apart from the fulcrum of sound and normal mind resting securely on sound and normal heredity.
 \usection{Human Rights}
