--- a/tex/p071.tex
+++ b/tex/p071.tex
@@ -100,7 +100,7 @@
 \vs p071 7:2 In the ideal state, education continues throughout life, and philosophy sometime becomes the chief pursuit of its citizens. The citizens of such a commonwealth pursue wisdom as an enhancement of insight into the significance of human relations, the meanings of reality, the nobility of values, the goals of living, and the glories of cosmic destiny.
 \vs p071 7:3 Urantians should get a vision of a new and higher cultural society. Education will jump to new levels of value with the passing of the purely profit\hyp{}motivated system of economics. Education has too long been localistic, militaristic, ego exalting, and success seeking; it must eventually become world\hyp{}wide, idealistic, self\hyp{}realizing, and cosmic grasping.
 \vs p071 7:4 Education recently passed from the control of the clergy to that of lawyers and businessmen. Eventually it must be given over to the philosophers and the scientists. Teachers must be free beings, real leaders, to the end that philosophy, the search for wisdom, may become the chief educational pursuit.
-\vs p071 7:5 Education is the business of living; it must continue throughout a lifetime so that mankind may gradually experience the ascending levels of mortal wisdom, which are:
+\vs p071 7:5 Education is the business of living; it must continue\tunemarkup{pgnexus10}{\linebreak} throughout a lifetime so that mankind may gradually experience the ascending levels of mortal wisdom, which are:
 \vs p071 7:6 \ublistelem{1.}\bibnobreakspace The knowledge of things.
 \vs p071 7:7 \ublistelem{2.}\bibnobreakspace The realization of meanings.
 \vs p071 7:8 \ublistelem{3.}\bibnobreakspace The appreciation of values.
