--- a/tex/p079.tex
+++ b/tex/p079.tex
@@ -23,7 +23,7 @@
 \vs p079 2:1 India is the only locality where all the Urantia races were blended, the Andite invasion adding the last stock. In the highlands north\hyp{}west of India the Sangik races came into existence, and without exception members of each penetrated the subcontinent of India in their early days, leaving behind them the most heterogeneous race mixture ever to exist on Urantia. Ancient India acted as a catch basin for the migrating races. The base of the peninsula was formerly somewhat narrower than now, much of the deltas of the Ganges and Indus being the work of the last 50,000 years.
 \vs p079 2:2 The earliest race mixtures in India were a blending of the migrating red and yellow races with the aboriginal Andonites. This group was later weakened by absorbing the greater portion of the extinct eastern green peoples as well as large numbers of the orange race, was slightly improved through limited admixture with the blue man, but suffered exceedingly through assimilation of large numbers of the indigo race. But the so\hyp{}called aborigines of India are hardly representative of these early people; they are rather the most inferior southern and eastern fringe, which was never fully absorbed by either the early Andites or their later appearing Aryan cousins.
 \vs p079 2:3 \pc By 20,000\,B.C. the population of western India had already become tinged with the Adamic blood, and never in the history of Urantia did any one people combine so many different races. But it was unfortunate that the secondary Sangik strains predominated, and it was a real calamity that both the blue and the red man were so largely missing from this racial melting pot of long ago; more of the primary Sangik strains would have contributed very much toward the enhancement of what might have been an even greater civilization. As it developed, the red man was destroying himself in the Americas, the blue man was disporting himself in Europe, and the early descendants of Adam (and most of the later ones) exhibited little desire to admix with the darker coloured peoples, whether in India, Africa, or elsewhere.
-\vs p079 2:4 \pc About 15,000\,B.C. increasing population pressure throughout Turkestan and Iran occasioned the first really extensive Andite movement toward India. For over 15 centuries these superior peoples poured in through the highlands of Baluchistan, spreading out over the valleys of the Indus and Ganges and slowly moving southward into the Deccan. This Andite pressure from the north\hyp{}west drove many of the southern and eastern inferiors into Burma and southern China but not sufficiently to save the invaders from racial obliteration.
+\vs p079 2:4 \pc About 15,000\,B.C. increasing population pressure\tunemarkup{pgnexus10}{\linebreak} throughout Turkestan and Iran occasioned the first really extensive Andite movement toward India. For over 15 centuries these superior peoples poured in through the highlands of Baluchistan, spreading out over the valleys of the Indus and Ganges and slowly moving southward into the Deccan. This Andite pressure from the north\hyp{}west drove many of the southern and eastern inferiors into Burma and southern China but not sufficiently to save the invaders from racial obliteration.
 \vs p079 2:5 The failure of India to achieve the hegemony of Eurasia was largely a matter of topography; population pressure from the north only crowded the majority of the people southward into the decreasing territory of the Deccan, surrounded on all sides by the sea. Had there been adjacent lands for emigration, then would the inferiors have been crowded out in all directions, and the superior stocks would have achieved a higher civilization.
 \vs p079 2:6 As it was, these earlier Andite conquerors made a desperate attempt to preserve their identity and stem the tide of racial engulfment by the establishment of rigid restrictions regarding intermarriage. Nonetheless, the Andites had become submerged by 10,000\,B.C., but the whole mass of the people had been markedly improved by this absorption.
 \vs p079 2:7 \pc Race mixture is always advantageous in that it favours versatility of culture and makes for a progressive civilization, but if the inferior elements of racial stocks predominate, such achievements will be short\hyp{}lived. A polyglot culture can be preserved only if the superior stocks reproduce themselves in a safe margin over the inferior. Unrestrained multiplication of inferiors, with decreasing reproduction of superiors, is unfailingly suicidal of cultural civilization.
