--- a/tex/p081.tex
+++ b/tex/p081.tex
@@ -14,7 +14,7 @@
 \vs p081 1:3 Climatic evolution is now about to accomplish what all other efforts had failed to do, that is, to compel Eurasian man to abandon hunting for the more advanced callings of herding and farming. Evolution may be slow, but it is terribly effective.
 \vs p081 1:4 Since slaves were so generally employed by the earlier agriculturists, the farmer was formerly looked down on by both the hunter and the herder. For ages it was considered menial to till the soil; wherefore the idea that soil toil is a curse, whereas it is the greatest of all blessings. Even in the days of Cain and Abel the sacrifices of the pastoral life were held in greater esteem than the offerings of agriculture.
 \vs p081 1:5 Man ordinarily evolved into a farmer from a hunter by transition through the era of the herder, and this was also true among the Andites, but more often the evolutionary coercion of climatic necessity would cause whole tribes to pass directly from hunters to successful farmers. But this phenomenon of passing immediately from hunting to agriculture only occurred in those regions where there was a high degree of race mixture with the violet stock.
-\vs p081 1:6 The evolutionary peoples (notably the Chinese) early learned to plant seeds and to cultivate crops through observation of the sprouting of seeds accidentally moistened or which had been put in graves as food for the departed. But throughout south\hyp{}west Asia, along the fertile river bottoms and adjacent plains, the Andites were carrying out the improved agricultural techniques inherited from their ancestors, who had made farming and gardening the chief pursuits within the boundaries of the second garden.
+\vs p081 1:6 The evolutionary peoples (notably the Chinese) early\tunemarkup{pgnexus10}{\linebreak} learned to plant seeds and to cultivate crops through observation of the sprouting of seeds accidentally moistened or which had been put in graves as food for the departed. But throughout south\hyp{}west Asia, along the fertile river bottoms and adjacent plains, the Andites were carrying out the improved agricultural techniques inherited from their ancestors, who had made farming and gardening the chief pursuits within the boundaries of the second garden.
 \vs p081 1:7 For thousands of years the descendants of Adam had grown wheat and barley, as improved in the Garden, throughout the highlands of the upper border of Mesopotamia. The descendants of Adam and Adamson here met, traded, and socially mingled.
 \vs p081 1:8 It was these enforced changes in living conditions which caused such a large proportion of the human race to become omnivorous in dietetic practice. And the combination of the wheat, rice, and vegetable diet with the flesh of the herds marked a great forward step in the health and vigour of these ancient peoples.
 \usection{The Tools of Civilization}
