--- a/tex/p091.tex
+++ b/tex/p091.tex
@@ -9,7 +9,7 @@
 \uminitoc{Praying as a Personal Experience}
 \uminitoc{Conditions of Effective Prayer}
 \author{Chief of Midwayers}
-\vs p091 0:1 Prayer, as an agency of religion, evolved from previous nonreligious monologue and dialogue expressions. With the attainment of self\hyp{}consciousness by primitive man there occurred the inevitable corollary of other\hyp{}consciousness, the dual potential of social response and God recognition.
+\vs p091 0:1 Prayer, as an agency of religion, evolved from previous nonreligious monologue and dialogue expressions.\tunemarkup{pgnexus10}{\linebreak} With the attainment of self\hyp{}consciousness by primitive man there occurred the inevitable corollary of other\hyp{}consciousness, the dual potential of social response and God recognition.
 \vs p091 0:2 The earliest prayer forms were not addressed to Deity. These expressions were much like what you would say to a friend as you entered upon some important undertaking, “Wish me luck.” Primitive man was enslaved to magic; luck, good and bad, entered into all the affairs of life. At first, these luck petitions were monologues --- just a kind of thinking out loud by the magic server. Next, these believers in luck would enlist the support of their friends and families, and presently some form of ceremony would be performed which included the whole clan or tribe.
 \vs p091 0:3 When the concepts of ghosts and spirits evolved, these petitions became superhuman in address, and with the consciousness of gods, such expressions attained to the levels of genuine prayer. As an illustration of this, among certain Australian tribes primitive religious prayers antedated their belief in spirits and superhuman personalities.
 \vs p091 0:4 The Toda tribe of India now observes this practice of praying to no one in particular, just as did the early peoples before the times of religious consciousness. Only, among the Todas, this represents a regression of their degenerating religion to this primitive level. The present\hyp{}day rituals of the dairymen priests of the Todas do not represent a religious ceremony since these impersonal prayers do not contribute anything to the conservation or enhancement of any social, moral, or spiritual values.
