--- a/tex/p094.tex
+++ b/tex/p094.tex
@@ -83,7 +83,7 @@
 \vs p094 7:8 Siddhartha taught far more truth than has survived in the modern cults bearing his name. Modern Buddhism is no more the teachings of Gautama Siddhartha than is Christianity the teachings of Jesus of Nazareth.
 \usection{The Buddhist Faith}
 \vs p094 8:1 To become a Buddhist, one merely made public profession of the faith by reciting the Refuge: “I take my refuge in the Buddha; I take my refuge in the Doctrine; I take my refuge in the Brotherhood.”
-\vs p094 8:2 Buddhism took origin in a historic person, not in a myth. Gautama’s followers called him Sasta, meaning master or teacher. While he made no superhuman claims for either himself or his teachings, his disciples early began to call him \bibemph{the enlightened one,} the Buddha; later on, Sakyamuni Buddha.
+\vs p094 8:2 Buddhism took origin in a historic person, not in a myth. Gautama’s followers called him Sasta, meaning master or\tunemarkup{pgnexus10}{\linebreak} teacher. While he made no superhuman claims for either himself or his teachings, his disciples early began to call him \bibemph{the enlightened one,} the Buddha; later on, Sakyamuni Buddha.
 \vs p094 8:3 \pc The original gospel of Gautama was based on the four noble truths:
 \vs p094 8:4 \ublistelem{1.}\bibnobreakspace The noble truths of suffering.
 \vs p094 8:5 \ublistelem{2.}\bibnobreakspace The origins of suffering.
@@ -113,10 +113,10 @@
 \vs p094 10:2 These simple\hyp{}minded Tibetans would not wholly give up their ancient magic and charms. Examination of the religious ceremonials of present\hyp{}day Tibetan rituals reveals an overgrown brotherhood of priests with shaven heads who practise an elaborate ritual embracing bells, chants, incense, processionals, rosaries, images, charms, pictures, holy water, gorgeous vestments, and elaborate choirs. They have rigid dogmas and crystallized creeds, mystic rites and special fasts. Their hierarchy embraces monks, nuns, abbots, and the Grand Lama. They pray to angels, saints, a Holy Mother, and the gods. They practise confessions and believe in purgatory. Their monasteries are extensive and their cathedrals magnificent. They keep up an endless repetition of sacred rituals and believe that such ceremonials bestow salvation. Prayers are fastened to a wheel, and with its turning they believe the petitions become efficacious. Among no other people of modern times can be found the observance of so much from so many religions; and it is inevitable that such a cumulative liturgy would become inordinately cumbersome and intolerably burdensome.
 \vs p094 10:3 The Tibetans have something of all the leading world religions except the simple teachings of the Jesusonian gospel: sonship with God, brotherhood with man, and ever\hyp{}ascending citizenship in the eternal universe.
 \usection{Buddhist Philosophy}
-\vs p094 11:1 Buddhism entered China in the first millennium after Christ, and it fitted well into the religious customs of the yellow race. In ancestor worship they had long prayed to the dead; now they could also pray for them. Buddhism soon amalgamated with the lingering ritualistic practices of disintegrating Taoism. This new synthetic religion with its temples of worship and definite religious ceremonial soon became the generally accepted cult of the peoples of China, Korea, and Japan.
+\vs p094 11:1 Buddhism entered China in the first millennium after\tunemarkup{pgnexus10}{\linebreak} Christ, and it fitted well into the religious customs of the yellow race. In ancestor worship they had long prayed to the dead; now they could also pray for them. Buddhism soon amalgamated with the lingering ritualistic practices of disintegrating Taoism. This new synthetic religion with its temples of worship and definite religious ceremonial soon became the generally accepted cult of the peoples of China, Korea, and Japan.
 \vs p094 11:2 \pc While in some respects it is unfortunate that Buddhism was not carried to the world until after Gautama’s followers had so perverted the traditions and teachings of the cult as to make of him a divine being, nonetheless this myth of his human life, embellished as it was with a multitude of miracles, proved very appealing to the auditors of the northern or Mahayana gospel of Buddhism.
 \vs p094 11:3 Some of his later followers taught that Sakyamuni Buddha’s spirit returned periodically to earth as a living Buddha, thus opening the way for an indefinite perpetuation of Buddha images, temples, rituals, and impostor “living Buddhas.” Thus did the religion of the great Indian protestant eventually find itself shackled with those very ceremonial practices and ritualistic incantations against which he had so fearlessly fought, and which he had so valiantly denounced.
-\vs p094 11:4 \pc The great advance made in Buddhist philosophy consisted in its comprehension of the relativity of all truth. Through the mechanism of this hypothesis Buddhists have been able to reconcile and correlate the divergencies within their own religious scriptures as well as the differences between their own and many others. It was taught that the small truth was for little minds, the large truth for great minds.
+\vs p094 11:4 \pc The great advance made in Buddhist philosophy consisted in its comprehension of the relativity of all truth.\tunemarkup{pgnexus10}{\linebreak} Through the mechanism of this hypothesis Buddhists have been able to reconcile and correlate the divergencies within their own religious scriptures as well as the differences between their own and many others. It was taught that the small truth was for little minds, the large truth for great minds.
 \vs p094 11:5 This philosophy also held that the Buddha (divine) nature resided in all men; that man, through his own endeavours, could attain to the realization of this inner divinity. And this teaching is one of the clearest presentations of the truth of the indwelling Adjusters ever to be made by a Urantian religion.
 \vs p094 11:6 But a great limitation in the original gospel of Siddhartha, as it was interpreted by his followers, was that it attempted the complete liberation of the human self from all the limitations of the mortal nature by the technique of isolating the self from objective reality. True cosmic self\hyp{}realization results from identification with cosmic reality and with the finite cosmos of energy, mind, and spirit, bounded by space and conditioned by time.
 \vs p094 11:7 But though the ceremonies and outward observances of Buddhism became grossly contaminated with those of the lands to which it travelled, this degeneration was not altogether the case in the philosophical life of the great thinkers who, from time to time, embraced this system of thought and belief. Through more than 2,000 years, many of the best minds of Asia have concentrated upon the problem of ascertaining absolute truth and the truth of the Absolute.
