--- a/tex/p099.tex
+++ b/tex/p099.tex
@@ -30,7 +30,7 @@
 \vs p099 3:3 The religionist is not unsympathetic with social suffering, not unmindful of civil injustice, not insulated from economic thinking, neither insensible to political tyranny. Religion influences social reconstruction directly because it spiritualizes and idealizes the individual citizen. Indirectly, cultural civilization is influenced by the attitude of these individual religionists as they become active and influential members of various social, moral, economic, and political groups.
 \vs p099 3:4 \pc The attainment of a high cultural civilization demands, first, the ideal type of citizen and, then, ideal and adequate social mechanisms wherewith such a citizenry may control the economic and political institutions of such an advanced human society.
 \vs p099 3:5 The church, because of overmuch false sentiment, has long ministered to the underprivileged and the unfortunate, and this has all been well, but this same sentiment has led to the unwise perpetuation of racially degenerate stocks which have tremendously retarded the progress of civilization.
-\vs p099 3:6 Many individual social reconstructionists, while vehemently repudiating institutionalized religion, are, after all, zealously religious in the propagation of their social reforms. And so it is that religious motivation, personal and more or less unrecognized, is playing a great part in the present\hyp{}day program of social reconstruction.
+\vs p099 3:6 Many individual social reconstructionists, while ve\-he\-ment\-ly repudiating institutionalized religion, are, after all, zealously religious in the propagation of their social reforms. And so it is that religious motivation, personal and more or less unrecognized, is playing a great part in the present\hyp{}day program of social reconstruction.
 \vs p099 3:7 \pc The great weakness of all this unrecognized and unconscious type of religious activity is that it is unable to profit from open religious criticism and thereby attain to profitable levels of self\hyp{}correction. It is a fact that religion does not grow unless it is disciplined by constructive criticism, amplified by philosophy, purified by science, and nourished by loyal fellowship.
 \vs p099 3:8 There is always the great danger that religion will become distorted and perverted into the pursuit of false goals, as when in times of war each contending nation prostitutes its religion into military propaganda. Loveless zeal is always harmful to religion, while persecution diverts the activities of religion into the achievement of some sociologic or theologic drive.
 \vs p099 3:9 \pc Religion can be kept free from unholy secular alliances only by:
