--- a/tex/p104.tex
+++ b/tex/p104.tex
@@ -70,7 +70,7 @@
 \vs p104 4:19 \ublistelem{3.}\bibnobreakspace The Deity Absolute.
 \vs p104 4:20 \pc From spirit potency to Paradise spirit, all spirit finds reality expression in this triune association of the pure spirit essence of the Father, the active spirit values of the Son\hyp{}Spirit, and the unlimited spirit potentials of the Deity Absolute. The existential values of spirit have their primordial genesis, complete manifestation, and final destiny in this triunity.
 \vs p104 4:21 The Father exists before spirit; the Son\hyp{}Spirit functions as active creative spirit; the Deity Absolute exists as all\hyp{}encompassing spirit, even beyond spirit.
-\vs p104 4:22 \pc \bibemph{The Fourth Triunity --- the triunity of energy infinity.} Within this triunity there eternalizes the beginnings and the endings of all energy reality, from space potency to monota. This grouping embraces the following:
+\vs p104 4:22 \pc \bibemph{The Fourth Triunity --- the triunity of energy infinity.} With\-in this triunity there eternalizes the beginnings and the endings of all energy reality, from space potency to monota. This grouping embraces the following:
 \vs p104 4:23 \ublistelem{1.}\bibnobreakspace The Father\hyp{}Spirit.
 \vs p104 4:24 \ublistelem{2.}\bibnobreakspace The Paradise Isle.
 \vs p104 4:25 \ublistelem{3.}\bibnobreakspace The Unqualified Absolute.
