--- a/tex/p108.tex
+++ b/tex/p108.tex
@@ -25,7 +25,7 @@
 \vs p108 2:4 Even with a Spirit of Truth endowed mind, the Adjusters cannot arbitrarily invade the mortal intellect prior to the appearance of moral decision. But when such a moral decision has been made, this spirit helper assumes jurisdiction direct from Divinington. There are no intermediaries or other intervening authorities or powers functioning between the divine Adjusters and their human subjects; God and man are directly related.
 \vs p108 2:5 Before the times of the pouring out of the Spirit of Truth upon the inhabitants of an evolutionary world, the Adjusters’ bestowal appears to be determined by many spirit influences and personality attitudes. We do not fully comprehend the laws governing such bestowals; we do not understand just what determines the release of the Adjusters who have volunteered to indwell such evolving minds. But we do observe numerous influences and conditions which appear to be associated with the arrival of the Adjusters in such minds prior to the bestowal of the Spirit of Truth, and they are:
 \vs p108 2:6 \ublistelem{1.}\bibnobreakspace The assignment of personal seraphic guardians. If a mortal has not been previously indwelt by an Adjuster, the assignment of a personal guardian brings the Adjuster forthwith. There exists some very definite but unknown relation between the ministry of Adjusters and the ministry of personal seraphic guardians.
-\vs p108 2:7 \ublistelem{2.}\bibnobreakspace The attainment of the third circle of intellectual achievement and spiritual attainment. I have observed Adjusters arrive in mortal minds upon the conquest of the third circle even before such an accomplishment could be signalized to the local universe personalities concerned with such matters.
+\vs p108 2:7 \ublistelem{2.}\bibnobreakspace The attainment of the third circle of intellectual\tunemarkup{pgnexus10}{\linebreak} achievement and spiritual attainment. I have observed Adjusters arrive in mortal minds upon the conquest of the third circle even before such an accomplishment could be signalized to the local universe personalities concerned with such matters.
 \vs p108 2:8 \ublistelem{3.}\bibnobreakspace Upon the making of a supreme decision of unusual spiritual import. Such human behaviour in a personal planetary crisis usually is attended by the immediate arrival of the waiting Adjuster.
 \vs p108 2:9 \ublistelem{4.}\bibnobreakspace The spirit of brotherhood. Regardless of the attainment of the psychic circles and the assignment of personal guardians --- in the absence of anything resembling a crisis decision --- when an evolving mortal becomes dominated by the love of his fellows and consecrated to unselfish ministry to his brethren in the flesh, the waiting Adjuster unvaryingly descends to indwell the mind of such a mortal minister.
 \vs p108 2:10 \ublistelem{5.}\bibnobreakspace Declaration of intention to do the will of God. We observe that many mortals on the worlds of space may be apparently in readiness to receive Adjusters, and yet the Monitors do not appear. We go on watching such creatures as they live from day to day, and presently they quietly, almost unconsciously, arrive at the decision to begin the pursuit of the doing of the will of the Father in heaven. And then we observe the immediate dispatch of the Thought Adjusters.
