--- a/tex/p112.tex
+++ b/tex/p112.tex
@@ -53,7 +53,7 @@
 \vs p112 2:7 \pc The universe fact of God’s becoming man has forever changed all meanings and altered all values of human personality. In the true meaning of the word, love connotes mutual regard of whole personalities, whether human or divine or human \bibemph{and} divine. Parts of the self may function in numerous ways --- thinking, feeling, wishing --- but only the co\hyp{}ordinated attributes of the whole personality are focused in intelligent action; and all of these powers are associated with the spiritual endowment of the mortal mind when a human being sincerely and unselfishly loves another being, human or divine.
 \vs p112 2:8 All mortal concepts of reality are based on the assumption of the actuality of human personality; all concepts of superhuman realities are based on the experience of the human personality with and in the cosmic realities of certain associated spiritual entities and divine personalities. Everything nonspiritual in human experience, excepting personality, is a means to an end. Every true relationship of mortal man with other persons --- human or divine --- is an end in itself. And such fellowship with the personality of Deity is the eternal goal of universe ascension.
 \vs p112 2:9 The possession of personality identifies man as a spiritual being since the unity of selfhood and the self\hyp{}consciousness of personality are endowments of the supermaterial world. The very fact that a mortal materialist can deny the existence of supermaterial realities in and of itself demonstrates the presence, and indicates the working, of spirit synthesis and cosmic consciousness in his human mind.
-\vs p112 2:10 There exists a great cosmic gulf between matter and thought, and this gulf is immeasurably greater between material mind and spiritual love. Consciousness, much less self\hyp{}consciousness, cannot be explained by any theory of mechanistic electronic association or materialistic energy phenomena.
+\vs p112 2:10 There exists a great cosmic gulf between matter and\tunemarkup{pgnexus10}{\linebreak} thought, and this gulf is immeasurably greater between material mind and spiritual love. Consciousness, much less self\hyp{}consciousness, cannot be explained by any theory of mechanistic electronic association or materialistic energy phenomena.
 \vs p112 2:11 \pc As mind pursues reality to its ultimate analysis, matter vanishes to the material senses but may still remain real to mind. When spiritual insight pursues that reality which remains after the disappearance of matter and pursues it to an ultimate analysis, it vanishes to mind, but the insight of spirit can still perceive cosmic realities and supreme values of a spiritual nature. Accordingly does science give way to philosophy, while philosophy must surrender to the conclusions inherent in genuine spiritual experience. Thinking surrenders to wisdom, and wisdom is lost in enlightened and reflective worship.
 \vs p112 2:12 In science the human self observes the material world; philosophy is the observation of this observation of the material world; religion, true spiritual experience, is the experiential realization of the cosmic reality of the observation of the observation of all this relative synthesis of the energy materials of time and space. To build a philosophy of the universe on an exclusive materialism is to ignore the fact that all things material are initially conceived as real in the experience of human consciousness. The observer cannot be the thing observed; evaluation demands some degree of transcendence of the thing which is evaluated.
 \vs p112 2:13 In time, thinking leads to wisdom and wisdom leads to worship; in eternity, worship leads to wisdom, and wisdom eventuates in the finality of thought.
