--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -40,8 +40,8 @@
 \vs p135 4:5 It was the influence of Elijah that caused John to adopt his methods of direct and blunt assault upon the sins and vices of his contemporaries. He sought to dress like Elijah, and he endeavoured to talk like Elijah; in every outward aspect he was like the olden prophet. He was just such a stalwart and picturesque child of nature, just such a fearless and daring preacher of righteousness. John was not illiterate, he did well know the Jewish sacred writings, but he was hardly cultured. He was a clear thinker, a powerful speaker, and a fiery denunciator. He was hardly an example to his age, but he was an eloquent rebuke.
 \vs p135 4:6 At last he thought out the method of proclaiming the new age, the kingdom of God; he settled that he was to become the herald of the Messiah; he swept aside all doubts and departed from Engedi one day in March of A.D.\,25 to begin his short but brilliant career as a public preacher.
 \usection{The Kingdom of God}
-\vs p135 5:1 In order to understand John’s message, account should be taken of the status of the Jewish people at the time he appeared upon the stage of action. For almost 100 years all Israel had been in a quandary; they were at a loss to explain their continuous subjugation to gentile overlords. Had not Moses taught that righteousness was always rewarded with prosperity and power? Were they not God’s chosen people? Why was the throne of David desolate and vacant? In the light of the Mosaic doctrines and the precepts of the prophets the Jews found it difficult to explain their long\hyp{}continued national desolation.
-\vs p135 5:2 About 100 years before the days of Jesus and John a new school of religious teachers arose in Palestine, the apocalyptists. These new teachers evolved a system of belief that accounted for the sufferings and humiliation of the Jews on the ground that they were paying the penalty for the nation’s sins. They fell back onto the well\hyp{}known reasons assigned to explain the Babylonian and other captivities of former times. But, so taught the apocalyptists, Israel should take heart; the days of their affliction were almost over; the discipline of God’s chosen people was about finished; God’s patience with the gentile foreigners was about exhausted. The end of Roman rule was synonymous with the end of the age and, in a certain sense, with the end of the world. These new teachers leaned heavily on the predictions of Daniel, and they consistently taught that creation was about to pass into its final stage; the kingdoms of this world were about to become the kingdom of God. To the Jewish mind of that day this was the meaning of that phrase --- the kingdom of heaven --- which runs throughout the teachings of both John and Jesus. To the Jews of Palestine the phrase “kingdom of heaven” had but one meaning: an absolutely righteous state in which God (the Messiah) would rule the nations of earth in perfection of power just as he ruled in heaven --- “Your will be done on earth as in heaven.”
+\vs p135 5:1 In order to understand John’s message, account should be taken of the status of the Jewish people at the time he appeared upon the stage of action. For almost one hundred years all Israel had been in a quandary; they were at a loss to explain their continuous subjugation to gentile overlords. Had not Moses taught that righteousness was always rewarded with prosperity and power? Were they not God’s chosen people? Why was the throne of David desolate and vacant? In the light of the Mosaic doctrines and the precepts of the prophets the Jews found it difficult to explain their long\hyp{}continued national desolation.
+\vs p135 5:2 About one hundred years before the days of Jesus and John a new school of religious teachers arose in Palestine, the apocalyptists. These new teachers evolved a system of belief that accounted for the sufferings and humiliation of the Jews on the ground that they were paying the penalty for the nation’s sins. They fell back onto the well\hyp{}known reasons assigned to explain the Babylonian and other captivities of former times. But, so taught the apocalyptists, Israel should take heart; the days of their affliction were almost over; the discipline of God’s chosen people was about finished; God’s patience with the gentile foreigners was about exhausted. The end of Roman rule was synonymous with the end of the age and, in a certain sense, with the end of the world. These new teachers leaned heavily on the predictions of Daniel, and they consistently taught that creation was about to pass into its final stage; the kingdoms of this world were about to become the kingdom of God. To the Jewish mind of that day this was the meaning of that phrase --- the kingdom of heaven --- which runs throughout the teachings of both John and Jesus. To the Jews of Palestine the phrase “kingdom of heaven” had but one meaning: an absolutely righteous state in which God (the Messiah) would rule the nations of earth in perfection of power just as he ruled in heaven --- “Your will be done on earth as in heaven.”
 \vs p135 5:3 In the days of John all Jews were expectantly asking, “How soon will the kingdom come?” There was a general feeling that the end of the rule of the gentile nations was drawing near. There was present throughout all Jewry a lively hope and a keen expectation that the consummation of the desire of the ages would occur during the lifetime of that generation.
 \vs p135 5:4 While the Jews differed greatly in their estimates of the nature of the coming kingdom, they were alike in their belief that the event was impending, near at hand, even at the door. Many who read the Old Testament literally looked expectantly for a new king in Palestine, for a regenerated Jewish nation delivered from its enemies and presided over by the successor of King David, the Messiah who would quickly be acknowledged as the rightful and righteous ruler of all the world. Another, though smaller, group of devout Jews held a vastly different view of this kingdom of God. They taught that the coming kingdom was not of this world, that the world was approaching its certain end, and that “a new heaven and a new earth” were to usher in the establishment of the kingdom of God; that this kingdom was to be an everlasting dominion, that sin was to be ended, and that the citizens of the new kingdom were to become immortal in their enjoyment of this endless bliss.
 \vs p135 5:5 All were agreed that some drastic purging or purifying discipline would of necessity precede the establishment of the new kingdom on earth. The literalists taught that a world\hyp{}wide war would ensue which would destroy all unbelievers, while the faithful would sweep on to universal and eternal victory. The spiritists taught that the kingdom would be ushered in by the great judgment of God which would relegate the unrighteous to their well\hyp{}deserved judgment of punishment and final destruction, at the same time elevating the believing saints of the chosen people to high seats of honour and authority with the Son of Man, who would rule over the redeemed nations in God’s name. And this latter group even believed that many devout gentiles might be admitted to the fellowship of the new kingdom.
