--- a/tex/p137.tex
+++ b/tex/p137.tex
@@ -67,7 +67,7 @@
 \vs p137 6:5 Jesus instructed them to take up their regular duties until “the hour of the kingdom comes.” And to encourage them, he set an example by going back regularly to work in the boatshop. In explaining that they should spend three hours every evening in study and preparation for their future work, Jesus further said: \textcolour{ubdarkred}{“We will all remain hereabout until the Father bids me call you. Each of you must now return to his accustomed work just as if nothing had happened. Tell no man about me and remember that my kingdom is not to come with noise and glamour, but rather must it come through the great change which my Father will have wrought in your hearts and in the hearts of those who shall be called to join you in the councils of the kingdom. You are now my friends; I trust you and I love you; you are soon to become my personal associates. Be patient, be gentle. Be ever obedient to the Father’s will. Make yourselves ready for the call of the kingdom. While you will experience great joy in the service of my Father, you should also be prepared for trouble, for I warn you that it will be only through much tribulation that many will enter the kingdom. But those who have found the kingdom, their joy will be full, and they shall be called the blest of all the earth. But do not entertain false hope; the world will stumble at my words. Even you, my friends, do not fully perceive what I am unfolding to your confused minds. Make no mistake; we go forth to labour for a generation of sign seekers. They will demand wonder\hyp{}working as the proof that I am sent by my Father, and they will be slow to recognize in the revelation of my Father’s \bibemph{love} the credentials of my mission.”}
 \vs p137 6:6 That evening, when they had returned to the land, before they went their way, Jesus, standing by the water’s edge, prayed: \textcolour{ubdarkred}{“My Father, I thank you for these little ones who, in spite of their doubts, even now believe. And for their sakes have I set myself apart to do your will. And now may they learn to be one, even as we are one.”}
 \usection{Four Months of Training}
-\vs p137 7:1 For four long months --- March, April, May, and June --- this tarrying time continued; Jesus held over 100 long and earnest, though cheerful and joyous, sessions with these 6 associates and his own brother James. Owing to sickness in his family, Jude seldom was able to attend these classes. James, Jesus’ brother, did not lose faith in him, but during these months of delay and inaction Mary nearly despaired of her son. Her faith, raised to such heights at Cana, now sank to new low levels. She could only fall back on her so oft\hyp{}repeated exclamation: “I cannot understand him. I cannot figure out what it all means.” But James’s wife did much to bolster Mary’s courage.
+\vs p137 7:1 For four long months --- March, April, May, and June --- this tarrying time continued; Jesus held over one hundred long and earnest, though cheerful and joyous, sessions with these six associates and his own brother James. Owing to sickness in his family, Jude seldom was able to attend these classes. James, Jesus’ brother, did not lose faith in him, but during these months of delay and inaction Mary nearly despaired of her son. Her faith, raised to such heights at Cana, now sank to new low levels. She could only fall back on her so oft\hyp{}repeated exclamation: “I cannot understand him. I cannot figure out what it all means.” But James’s wife did much to bolster Mary’s courage.
 \vs p137 7:2 Throughout these four months these seven believers, one his own brother in the flesh, were getting acquainted with Jesus; they were getting used to the idea of living with this God\hyp{}man. Though they called him Rabbi, they were learning not to be afraid of him. Jesus possessed that matchless grace of personality which enabled him so to live among them that they were not dismayed by his divinity. They found it really easy to be “friends with God,” God incarnate in the likeness of mortal flesh. This time of waiting severely tested the entire group of believers. Nothing, absolutely nothing, miraculous happened. Day by day they went about their ordinary work, while night after night they sat at Jesus’ feet. And they were held together by his matchless personality and by the gracious words which he spoke to them evening upon evening.
 \vs p137 7:3 This period of waiting and teaching was especially hard on Simon Peter. He repeatedly sought to persuade Jesus to launch forth with the preaching of the kingdom in Galilee while John continued to preach in Judea. But Jesus’ reply to Peter ever was: \textcolour{ubdarkred}{“Be patient, Simon. Make progress. We shall be none too ready when the Father calls.”} And Andrew would calm Peter now and then with his more seasoned and philosophic counsel. Andrew was tremendously impressed with the human naturalness of Jesus. He never grew weary of contemplating how one who could live so near God could be so friendly and considerate of men.
 \vs p137 7:4 Throughout this entire period Jesus spoke in the synagogue but twice. By the end of these many weeks of waiting the reports about his baptism and the wine of Cana had begun to quiet down. And Jesus saw to it that no more apparent miracles happened during this time. But even though they lived so quietly at Bethsaida, reports of the strange doings of Jesus had been carried to Herod Antipas, who in turn sent spies to ascertain what he was about. But Herod was more concerned about the preaching of John. He decided not to molest Jesus, whose work continued along so quietly at Capernaum.
