--- a/tex/p139.tex
+++ b/tex/p139.tex
@@ -11,7 +11,7 @@
 \uminitoc{Judas Iscariot}
 \author{Midwayer Commission}
 \vs p139 0:1 It is an eloquent testimony to the charm and righteousness of Jesus’ earth life that, although he repeatedly dashed to pieces the hopes of his apostles and tore to shreds their every ambition for personal exaltation, only one deserted him.
-\vs p139 0:2 The apostles learned from Jesus about the kingdom of heaven, and Jesus learned much from them about the kingdom of men, human nature as it lives on Urantia and on the other evolutionary worlds of time and space. These twelve men represented many different types of human temperament, and they had not been made \bibemph{alike} by schooling. Many of these Galilean fishermen carried heavy strains of gentile blood as a result of the forcible conversion of the gentile population of Galilee 100 years previously.
+\vs p139 0:2 The apostles learned from Jesus about the kingdom of heaven, and Jesus learned much from them about the kingdom of men, human nature as it lives on Urantia and on the other evolutionary worlds of time and space. These twelve men represented many different types of human temperament, and they had not been made \bibemph{alike} by schooling. Many of these Galilean fishermen carried heavy strains of gentile blood as a result of the forcible conversion of the gentile population of Galilee one hundred years previously.
 \vs p139 0:3 \pc Do not make the mistake of regarding the apostles as being altogether ignorant and unlearned. All of them, except the Alpheus twins, were graduates of the synagogue schools, having been thoroughly trained in the Hebrew scriptures and in much of the current knowledge of that day. Seven were graduates of the Capernaum synagogue schools, and there were no better Jewish schools in all Galilee.
 \vs p139 0:4 When your records refer to these messengers of the kingdom as being “ignorant and unlearned,” it was intended to convey the idea that they were laymen, unlearned in the lore of the rabbis and untrained in the methods of rabbinical interpretation of the Scriptures. They were lacking in so\hyp{}called higher education. In modern times they would certainly be considered uneducated, and in some circles of society even uncultured. One thing is certain: They had not all been put through the same rigid and stereotyped educational curriculum. From adolescence on they had enjoyed separate experiences of learning how to live.
 \usection{Andrew, the First Chosen}
@@ -23,7 +23,7 @@
 \vs p139 1:6 \pc Andrew and Peter were very unlike in character and temperament, but it must be recorded everlastingly to their credit that they got along together splendidly. Andrew was never jealous of Peter’s oratorical ability. Not often will an older man of Andrew’s type be observed exerting such a profound influence over a younger and talented brother. Andrew and Peter never seemed to be in the least jealous of each other’s abilities or achievements. Late on the evening of the day of Pentecost, when, largely through the energetic and inspiring preaching of Peter, 2,000 souls were added to the kingdom, Andrew said to his brother: “I could not do that, but I am glad I have a brother who could.” To which Peter replied: “And but for your bringing me to the Master and by your steadfastness \bibemph{keeping} me with him, I should not have been here to do this.” Andrew and Peter were the exceptions to the rule, proving that even brothers can live together peaceably and work together effectively.
 \vs p139 1:7 After Pentecost Peter was famous, but it never irritated the older Andrew to spend the rest of his life being introduced as “Simon Peter’s brother.”
 \vs p139 1:8 \pc Of all the apostles, Andrew was the best judge of men. He knew that trouble was brewing in the heart of Judas Iscariot even when none of the others suspected that anything was wrong with their treasurer; but he told none of them his fears. Andrew’s great service to the kingdom was in advising Peter, James, and John concerning the choice of the first missionaries who were sent out to proclaim the gospel, and also in counselling these early leaders about the organization of the administrative affairs of the kingdom. Andrew had a great gift for discovering the hidden resources and latent talents of young people.
-\vs p139 1:9 Very soon after Jesus’ ascension on high, Andrew began the writing of a personal record of many of the sayings and doings of his departed Master. After Andrew’s death other copies of this private record were made and circulated freely among the early teachers of the Christian church. These informal notes of Andrew’s were subsequently edited, amended, altered, and added to until they made up a fairly consecutive narrative of the Master’s life on earth. The last of these few altered and amended copies was destroyed by fire at Alexandria about 100 years after the original was written by the first chosen of the twelve apostles.
+\vs p139 1:9 Very soon after Jesus’ ascension on high, Andrew began the writing of a personal record of many of the sayings and doings of his departed Master. After Andrew’s death other copies of this private record were made and circulated freely among the early teachers of the Christian church. These informal notes of Andrew’s were subsequently edited, amended, altered, and added to until they made up a fairly consecutive narrative of the Master’s life on earth. The last of these few altered and amended copies was destroyed by fire at Alexandria about one hundred years after the original was written by the first chosen of the twelve apostles.
 \vs p139 1:10 Andrew was a man of clear insight, logical thought, and firm decision, whose great strength of character consisted in his superb stability. His temperamental handicap was his lack of enthusiasm; he many times failed to encourage his associates by judicious commendation. And this reticence to praise the worthy accomplishments of his friends grew out of his abhorrence of flattery and insincerity. Andrew was one of those all\hyp{}round, even\hyp{}tempered, self\hyp{}made, and successful men of modest affairs.
 \vs p139 1:11 \pc Every one of the apostles loved Jesus, but it remains true that each of the twelve was drawn toward him because of some certain trait of personality which made a special appeal to the individual apostle. Andrew admired Jesus because of his consistent sincerity, his unaffected dignity. When men once knew Jesus, they were possessed with the urge to share him with their friends; they really wanted all the world to know him.
 \vs p139 1:12 \pc When the later persecutions finally scattered the apostles from Jerusalem, Andrew journeyed through Armenia, Asia Minor, and Macedonia and, after bringing many thousands into the kingdom, was finally apprehended and crucified in Patrae in Achaia. It was two full days before this robust man expired on the cross, and throughout these tragic hours he continued effectively to proclaim the glad tidings of the salvation of the kingdom of heaven.
