--- a/tex/p141.tex
+++ b/tex/p141.tex
@@ -12,7 +12,7 @@
 \vs p141 0:1 On the first day of the week, January 19, A.D.\,27, Jesus and the twelve apostles made ready to depart from their headquarters in Bethsaida. The twelve knew nothing of their Master’s plans except that they were going up to Jerusalem to attend the Passover feast in April, and that it was the intention to journey by way of the Jordan valley. They did not get away from Zebedee’s house until near noon because the families of the apostles and others of the disciples had come to say good\hyp{}bye and wish them well in the new work they were about to begin.
 \vs p141 0:2 Just before leaving, the apostles missed the Master, and Andrew went out to find him. After a brief search he found Jesus sitting in a boat down the beach, and he was weeping. The twelve had often seen their Master when he seemed to grieve, and they had beheld his brief seasons of serious preoccupation of mind, but none of them had ever seen him weep. Andrew was somewhat startled to see the Master thus affected on the eve of their departure for Jerusalem, and he ventured to approach Jesus and ask: “On this great day, Master, when we are to depart for Jerusalem to proclaim the Father’s kingdom, why is it that you weep? Which of us has offended you?” And Jesus, going back with Andrew to join the twelve, answered him: \textcolour{ubdarkred}{“No one of you has grieved me. I am saddened only because none of my father Joseph’s family have remembered to come over to bid us Godspeed.”} At this time Ruth was on a visit to her brother Joseph at Nazareth. Other members of his family were kept away by pride, disappointment, misunderstanding, and petty resentment indulged as a result of hurt feelings.
 \usection{Leaving Galilee}
-\vs p141 1:1 Capernaum was not far from Tiberias, and the fame of Jesus had begun to spread well over all of Galilee and even to parts beyond. Jesus knew that Herod would soon begin to take notice of his work; so he thought best to journey south and into Judea with his apostles. A company of over 100 believers desired to go with them, but Jesus spoke to them and besought them not to accompany the apostolic group on their way down the Jordan. Though they consented to remain behind, many of them followed after the Master within a few days.
+\vs p141 1:1 Capernaum was not far from Tiberias, and the fame of Jesus had begun to spread well over all of Galilee and even to parts beyond. Jesus knew that Herod would soon begin to take notice of his work; so he thought best to journey south and into Judea with his apostles. A company of over one hundred believers desired to go with them, but Jesus spoke to them and besought them not to accompany the apostolic group on their way down the Jordan. Though they consented to remain behind, many of them followed after the Master within a few days.
 \vs p141 1:2 The first day Jesus and the apostles only journeyed as far as Tarichea, where they rested for the night. The next day they travelled to a point on the Jordan near Pella where John had preached about one year before, and where Jesus had received baptism. Here they tarried for more than two weeks, teaching and preaching. By the end of the first week several hundred people had assembled in a camp near where Jesus and the twelve dwelt, and they had come from Galilee, Phoenicia, Syria, the Decapolis, Perea, and Judea.
 \vs p141 1:3 Jesus did no public preaching. Andrew divided the multitude and assigned the preachers for the forenoon and afternoon assemblies; after the evening meal Jesus talked with the twelve. He taught them nothing new but reviewed his former teaching and answered their many questions. On one of these evenings he told the twelve something about the 40 days which he spent in the hills near this place.
 \vs p141 1:4 Many of those who came from Perea and Judea had been baptized by John and were interested in finding out more about Jesus’ teachings. The apostles made much progress in teaching the disciples of John inasmuch as they did not in any way detract from John’s preaching, and since they did not at this time even baptize their new disciples. But it was always a stumbling stone to John’s followers that Jesus, if he were all that John had announced, did nothing to get him out of prison. John’s disciples never could understand why Jesus did not prevent the cruel death of their beloved leader.
