--- a/tex/p144.tex
+++ b/tex/p144.tex
@@ -192,7 +192,7 @@
 \vs p144 6:10 \pc And this is the story of the first attempt of Jesus’ followers to co\hyp{}ordinate divergent efforts, compose differences of opinion, organize group undertakings, legislate on outward observances, and socialize personal religious practices.
 \vs p144 6:11 Many other minor matters were considered and their solutions unanimously agreed upon. These 24 men had a truly remarkable experience these two weeks when they were compelled to face problems and compose difficulties without Jesus. They learned to differ, to debate, to contend, to pray, and to compromise, and throughout it all to remain sympathetic with the other person’s viewpoint and to maintain at least some degree of tolerance for his honest opinions.
 \vs p144 6:12 \pc On the afternoon of their final discussion of financial questions, Jesus returned, heard of their deliberations, listened to their decisions, and said: \textcolour{ubdarkred}{“These, then, are your conclusions, and I shall help you each to carry out the spirit of your united decisions.”}
-\vs p144 6:13 \pc 2½ months from this time John was executed, and throughout this period the apostles of John remained with Jesus and the twelve. They all worked together and baptized believers during this season of labour in the cities of the Decapolis. The Gilboa camp was broken up on November 2, A.D.\,27.
+\vs p144 6:13 \pc Two months and a half from this time John was executed, and throughout this period the apostles of John remained with Jesus and the twelve. They all worked together and baptized believers during this season of labour in the cities of the Decapolis. The Gilboa camp was broken up on November 2, A.D.\,27.
 \usection{In the Decapolis Cities}
 \vs p144 7:1 Throughout the months of November and December, Jesus and the 24 worked quietly in the Greek cities of the Decapolis, chiefly in Scythopolis, Gerasa, Abila, and Gadara. This was really the end of that preliminary period of taking over John’s work and organization. Always does the socialized religion of a new revelation pay the price of compromise with the established forms and usages of the preceding religion which it seeks to salvage. Baptism was the price which the followers of Jesus paid in order to carry with them, as a socialized religious group, the followers of John the Baptist. John’s followers, in joining Jesus’ followers, gave up just about everything except water baptism.
 \vs p144 7:2 Jesus did little public teaching on this mission to the cities of the Decapolis. He spent considerable time teaching the 24 and had many special sessions with John’s twelve apostles. In time they became more understanding as to why Jesus did not go to visit John in prison, and why he made no effort to secure his release. But they never could understand why Jesus did no marvellous works, why he refused to produce outward signs of his divine authority. Before coming to the Gilboa camp, they had believed in Jesus mostly because of John’s testimony, but soon they were beginning to believe as a result of their own contact with the Master and his teachings.
