--- a/tex/p149.tex
+++ b/tex/p149.tex
@@ -13,7 +13,7 @@
 \vs p149 0:4 \pc Throughout this period and subsequently, up to the time of the final departure of Jesus and the twelve for Jerusalem, David Zebedee maintained a permanent headquarters for the work of the kingdom in his father’s house at Bethsaida. This was the clearinghouse for Jesus’ work on earth and the relay station for the messenger service which David carried on between the workers in various parts of Palestine and adjacent regions. He did all of this on his own initiative but with the approval of Andrew. David employed 40 to 50 messengers in this intelligence division of the rapidly enlarging and extending work of the kingdom. While thus employed, he partially supported himself by spending some of his time at his old work of fishing.
 \usection{The Widespread Fame of Jesus}
 \vs p149 1:1 By the time the camp at Bethsaida had been broken up, the fame of Jesus, particularly as a healer, had spread to all parts of Palestine and through all of Syria and the surrounding countries. For weeks after they left Bethsaida, the sick continued to arrive, and when they did not find the Master, on learning from David where he was, they would go in search of him. On this tour Jesus did not deliberately perform any so\hyp{}called miracles of healing. Nevertheless, scores of afflicted found restoration of health and happiness as a result of the reconstructive power of the intense faith which impelled them to seek for healing.
-\vs p149 1:2 There began to appear about the time of this mission --- and continued throughout the remainder of Jesus’ life on earth --- a peculiar and unexplained series of healing phenomena. In the course of this 3 months’ tour more than 100 men, women, and children from Judea, Idumea, Galilee, Syria, Tyre, and Sidon, and from beyond the Jordan were beneficiaries of this unconscious healing by Jesus and, returning to their homes, added to the enlargement of Jesus’ fame. And they did this notwithstanding that Jesus would, every time he observed one of these cases of spontaneous healing, directly charge the beneficiary to \textcolour{ubdarkred}{“tell no man.”}
+\vs p149 1:2 There began to appear about the time of this mission --- and continued throughout the remainder of Jesus’ life on earth --- a peculiar and unexplained series of healing phenomena. In the course of this 3 months’ tour more than one hundred men, women, and children from Judea, Idumea, Galilee, Syria, Tyre, and Sidon, and from beyond the Jordan were beneficiaries of this unconscious healing by Jesus and, returning to their homes, added to the enlargement of Jesus’ fame. And they did this notwithstanding that Jesus would, every time he observed one of these cases of spontaneous healing, directly charge the beneficiary to \textcolour{ubdarkred}{“tell no man.”}
 \vs p149 1:3 \pc It was never revealed to us just what occurred in these cases of spontaneous or unconscious healing. The Master never explained to his apostles how these healings were effected, other than that on several occasions he merely said, \textcolour{ubdarkred}{“I perceive that power has gone forth from me.”} On one occasion he remarked when touched by an ailing child, “I perceive that life has gone forth from me.”
 \vs p149 1:4 In the absence of direct word from the Master regarding the nature of these cases of spontaneous healing, it would be presuming on our part to undertake to explain how they were accomplished, but it will be permissible to record our opinion of all such healing phenomena. We believe that many of these apparent miracles of healing, as they occurred in the course of Jesus’ earth ministry, were the result of the coexistence of the following three powerful, potent, and associated influences:
 \vs p149 1:5 \ublistelem{1.}\bibnobreakspace The presence of strong, dominant, and living faith in the heart of the human being who persistently sought healing, together with the fact that such healing was desired for its spiritual benefits rather than for purely physical restoration.
