--- a/tex/p153.tex
+++ b/tex/p153.tex
@@ -32,7 +32,7 @@
 \vs p153 2:13 When Jesus had finished speaking, the ruler of the synagogue dismissed the congregation, but they would not depart. They crowded up around Jesus to ask more questions while others murmured and disputed among themselves. And this state of affairs continued for more than three hours. It was well past 19:00 before the audience finally dispersed.
 \usection{The After Meeting}
 \vs p153 3:1 Many were the questions asked Jesus during this after meeting. Some were asked by his perplexed disciples, but more were asked by cavilling unbelievers who sought only to embarrass and entrap him.
-\vs p153 3:2 One of the visiting Pharisees, mounting a lampstand, shouted out this question: “You tell us that you are the bread of life. How can you give us your flesh to eat or your blood to drink? What avail is your teaching if it cannot be carried out?” And Jesus answered this question, saying: \textcolour{ubdarkred}{“I did not teach you that my flesh is the bread of life nor that my blood is the water thereof. But I did say that my life in the flesh is a bestowal of the bread of heaven. The fact of the Word of God bestowed in the flesh and the phenomenon of the Son of Man subject to the will of God, constitute a reality of experience which is equivalent to the divine sustenance. You cannot eat my flesh nor can you drink my blood, but you can become one in spirit with me even as I am one in spirit with the Father. You can be nourished by the eternal word of God, which is indeed the bread of life, and which has been bestowed in the likeness of mortal flesh; and you can be watered in soul by the divine spirit, which is truly the water of life. The Father has sent me into the world to show how he desires to indwell and direct all men; and I have so lived this life in the flesh as to inspire all men likewise ever to seek to know and do the will of the indwelling heavenly Father.”}
+\vs p153 3:2 One of the visiting Pharisees, mounting a lampstand,\tunemarkup{pgnexus10}{\linebreak} shouted out this question: “You tell us that you are the bread of life. How can you give us your flesh to eat or your blood to drink? What avail is your teaching if it cannot be carried out?” And Jesus answered this question, saying: \textcolour{ubdarkred}{“I did not teach you that my flesh is the bread of life nor that my blood is the water thereof. But I did say that my life in the flesh is a bestowal of the bread of heaven. The fact of the Word of God bestowed in the flesh and the phenomenon of the Son of Man subject to the will of God, constitute a reality of experience which is equivalent to the divine sustenance. You cannot eat my flesh nor can you drink my blood, but you can become one in spirit with me even as I am one in spirit with the Father. You can be nourished by the eternal word of God, which is indeed the bread of life, and which has been bestowed in the likeness of mortal flesh; and you can be watered in soul by the divine spirit, which is truly the water of life. The Father has sent me into the world to show how he desires to indwell and direct all men; and I have so lived this life in the flesh as to inspire all men likewise ever to seek to know and do the will of the indwelling heavenly Father.”}
 \vs p153 3:3 Then one of the Jerusalem spies who had been observing Jesus and his apostles, said: “We notice that neither you nor your apostles wash your hands properly before you eat bread. You must well know that such a practice as eating with defiled and unwashed hands is a transgression of the law of the elders. Neither do you properly wash your drinking cups and eating vessels. Why is it that you show such disrespect for the traditions of the fathers and the laws of our elders?” And when Jesus heard him speak, he answered: \textcolour{ubdarkred}{“Why is it that you transgress the commandments of God by the laws of your tradition? The commandment says, ‘Honour your father and your mother,’ and directs that you share with them your substance if necessary; but you enact a law of tradition which permits undutiful children to say that the money wherewith the parents might have been assisted has been ‘given to God.’ The law of the elders thus relieves such crafty children of their responsibility, notwithstanding that the children subsequently use all such monies for their own comfort. Why is it that you in this way make void the commandment by your own tradition? Well did Isaiah prophesy of you hypocrites, saying: ‘This people honours me with their lips, but their heart is far from me. In vain do they worship me, teaching as their doctrines the precepts of men.’}
 \vs p153 3:4 \textcolour{ubdarkred}{“You can see how it is that you desert the commandment while you hold fast to the tradition of men. Altogether willing are you to reject the word of God while you maintain your own traditions. And in many other ways do you dare to set up your own teachings above the law and the prophets.”}
 \vs p153 3:5 Jesus then directed his remarks to all present. He said: “But hearken to me, all of you. It is not that which enters into the mouth that spiritually defiles the man, but rather that which proceeds out of the mouth and from the heart.” But even the apostles failed fully to grasp the meaning of his words, for Simon Peter also asked him: “Lest some of your hearers be unnecessarily offended, would you explain to us the meaning of these words?” And then said Jesus to Peter: \textcolour{ubdarkred}{“Are you also hard of understanding? Know you not that every plant which my heavenly Father has not planted shall be rooted up? Turn now your attention to those who would know the truth. You cannot compel men to love the truth. Many of these teachers are blind guides. And you know that, if the blind lead the blind, both shall fall into the pit. But hearken while I tell you the truth concerning those things which morally defile and spiritually contaminate men. I declare it is not that which enters the body by the mouth or gains access to the mind through the eyes and ears, that defiles the man. Man is only defiled by that evil which may originate within the heart, and which finds expression in the words and deeds of such unholy persons. Do you not know it is from the heart that there come forth evil thoughts, wicked projects of murder, theft, and adulteries, together with jealousy, pride, anger, revenge, railings, and false witness? And it is just such things that defile men, and not that they eat bread with ceremonially unclean hands.”}\fnc{He said: “But hearken to \bibtextul{me} all of you. \bibexpl{The comma properly separates the phrases, making this sentence much easier to read.}}
