--- a/tex/p154.tex
+++ b/tex/p154.tex
@@ -11,11 +11,11 @@
 \vs p154 0:2 One of Herod’s official family, Chuza, whose wife belonged to the women’s ministering corps, had informed him that Jesus did not propose to meddle with the affairs of earthly rule; that he was only concerned with the establishment of the spiritual brotherhood of his believers, which brotherhood he called the kingdom of heaven. Herod had confidence in Chuza’s reports, so much so that he refused to interfere with Jesus’ activities. Herod was also influenced at this time, in his attitude toward Jesus, by his superstitious fear of John the Baptist. Herod was one of those apostate Jews who, while he believed nothing, feared everything. He had a bad conscience for having put John to death, and he did not want to become entangled in these intrigues against Jesus. He knew of many cases of sickness which had been apparently healed by Jesus, and he regarded him as either a prophet or a relatively harmless religious fanatic.
 \vs p154 0:3 When the Jews threatened to report to Caesar that he was shielding a traitorous subject, Herod ordered them out of his council chamber. Thus matters rested for one week, during which time Jesus prepared his followers for the impending dispersion.
 \usection{A Week of Counsel}
-\vs p154 1:1 From May 1 to May 7 Jesus held intimate counsel with his followers at the Zebedee house. Only the tried and trusted disciples were admitted to these conferences. At this time there were only about 100 disciples who had the moral courage to brave the opposition of the Pharisees and openly declare their adherence to Jesus. With this group he held sessions morning, afternoon, and evening. Small companies of inquirers assembled each afternoon by the seaside, where some of the evangelists or apostles discoursed to them. These groups seldom numbered more than 50.
+\vs p154 1:1 From May 1 to May 7 Jesus held intimate counsel with his followers at the Zebedee house. Only the tried and trusted disciples were admitted to these conferences. At this time there were only about one hundred disciples who had the moral courage to brave the opposition of the Pharisees and openly declare their adherence to Jesus. With this group he held sessions morning, afternoon, and evening. Small companies of inquirers assembled each afternoon by the seaside, where some of the evangelists or apostles discoursed to them. These groups seldom numbered more than 50.
 \vs p154 1:2 On Friday of this week official action was taken by the rulers of the Capernaum synagogue closing the house of God to Jesus and all his followers. This action was taken at the instigation of the Jerusalem Pharisees. Jairus resigned as chief ruler and openly aligned himself with Jesus.
 \vs p154 1:3 The last of the seaside meetings was held on Sabbath afternoon, May 7. Jesus talked to less than 150 who had assembled at that time. This Saturday night marked the time of the lowest ebb in the tide of popular regard for Jesus and his teachings. From then on there was a steady, slow, but more healthful and dependable growth in favourable sentiment; a new following was built up which was better grounded in spiritual faith and true religious experience. The more or less composite and compromising transition stage between the materialistic concepts of the kingdom held by the Master’s followers and those more idealistic and spiritual concepts taught by Jesus, had now definitely ended. From now on there was a more open proclamation of the gospel of the kingdom in its larger scope and in its far\hyp{}flung spiritual implications.
 \usection{A Week of Rest}
-\vs p154 2:1 Sunday, May 8, A.D.\,29, at Jerusalem, the Sanhedrin passed a decree closing all the synagogues of Palestine to Jesus and his followers. This was a new and unprecedented usurpation of authority by the Jerusalem Sanhedrin. Theretofore each synagogue had existed and functioned as an independent congregation of worshippers and was under the rule and direction of its own board of governors. Only the synagogues of Jerusalem had been subject to the authority of the Sanhedrin. This summary action of the Sanhedrin was followed by the resignation of five of its members. 100 messengers were immediately dispatched to convey and enforce this decree. Within the short space of two weeks every synagogue in Palestine had bowed to this manifesto of the Sanhedrin except the synagogue at Hebron. The rulers of the Hebron synagogue refused to acknowledge the right of the Sanhedrin to exercise such jurisdiction over their assembly. This refusal to accede to the Jerusalem decree was based on their contention of congregational autonomy rather than on sympathy with Jesus’ cause. Shortly thereafter the Hebron synagogue was destroyed by fire.
+\vs p154 2:1 Sunday, May 8, A.D.\,29, at Jerusalem, the Sanhedrin passed a decree closing all the synagogues of Palestine to Jesus and his followers. This was a new and unprecedented usurpation of authority by the Jerusalem Sanhedrin. Theretofore each synagogue had existed and functioned as an independent congregation of worshippers and was under the rule and direction of its own board of governors. Only the synagogues of Jerusalem had been subject to the authority of the Sanhedrin. This summary action of the Sanhedrin was followed by the resignation of five of its members. One hundred messengers were immediately dispatched to convey and enforce this decree. Within the short space of two weeks every synagogue in Palestine had bowed to this manifesto of the Sanhedrin except the synagogue at Hebron. The rulers of the Hebron synagogue refused to acknowledge the right of the Sanhedrin to exercise such jurisdiction over their assembly. This refusal to accede to the Jerusalem decree was based on their contention of congregational autonomy rather than on sympathy with Jesus’ cause. Shortly thereafter the Hebron synagogue was destroyed by fire.
 \vs p154 2:2 \pc This same Sunday morning, Jesus declared a week’s holiday, urging all of his disciples to return to their homes or friends to rest their troubled souls and speak words of encouragement to their loved ones. He said: \textcolour{ubdarkred}{“Go to your several places to play or fish while you pray for the extension of the kingdom.”}
 \vs p154 2:3 This week of rest enabled Jesus to visit many families and groups about the seaside. He also went fishing with David Zebedee on several occasions, and while he went about alone much of the time, there always lurked near by two or three of David’s most trusted messengers, who had no uncertain orders from their chief respecting the safeguarding of Jesus. There was no public teaching of any sort during this week of rest.
 \vs p154 2:4 \pc This was the week that Nathaniel and James Zebedee suffered from more than a slight illness. For three days and nights they were acutely afflicted with a painful digestive disturbance. On the third night Jesus sent Salome, James’s mother, to her rest, while he ministered to his suffering apostles. Of course Jesus could have instantly healed these two men, but that is not the method of either the Son or the Father in dealing with these commonplace difficulties and afflictions of the children of men on the evolutionary worlds of time and space. Never once, throughout all of his eventful life in the flesh, did Jesus engage in any sort of supernatural ministration to any member of his earth family or in behalf of any one of his immediate followers.
@@ -34,7 +34,7 @@
 \vs p154 5:1 May 22 was an eventful day in the life of Jesus. On this Sunday morning, before daybreak, one of David’s messengers arrived in great haste from Tiberias, bringing the word that Herod had authorized, or was about to authorize, the arrest of Jesus by the officers of the Sanhedrin. The receipt of the news of this impending danger caused David Zebedee to arouse his messengers and send them out to all the local groups of disciples, summoning them for an emergency council at 7:00 that morning. When the sister\hyp{}in\hyp{}law of Jude (Jesus’ brother) heard this alarming report, she hastened word to all of Jesus’ family who dwelt near by, summoning them forthwith to assemble at Zebedee’s house. And in response to this hasty call, presently there were assembled Mary, James, Joseph, Jude, and Ruth.
 \vs p154 5:2 At this early morning meeting Jesus imparted his farewell instructions to the assembled disciples; that is, he bade them farewell for the time being, knowing well that they would soon be dispersed from Capernaum. He directed them all to seek God for guidance and to carry on the work of the kingdom regardless of consequences. The evangelists were to labour as they saw fit until such time as they might be called. He selected twelve of the evangelists to accompany him; the twelve apostles he directed to remain with him no matter what happened. The twelve women he instructed to remain at the Zebedee house and at Peter’s house until he should send for them.
 \vs p154 5:3 Jesus consented to David Zebedee’s continuing his countrywide messenger service, and in bidding the Master farewell presently, David said: “Go forth to your work, Master. Don’t let the bigots catch you, and never doubt that the messengers will follow after you. My men will never lose contact with you, and through them you shall know of the kingdom in other parts, and by them we will all know about you. Nothing that might happen to me will interfere with this service, for I have appointed first and second leaders, even a third. I am neither a teacher nor a preacher, but it is in my heart to do this, and none can stop me.”
-\vs p154 5:4 About 7:30 this morning Jesus began his parting address to almost 100 believers who had crowded indoors to hear him. This was a solemn occasion for all present, but Jesus seemed unusually cheerful; he was once more like his normal self. The seriousness of weeks had gone, and he inspired all of them with his words of faith, hope, and courage.
+\vs p154 5:4 About 7:30 this morning Jesus began his parting address to almost one hundred believers who had crowded indoors to hear him. This was a solemn occasion for all present, but Jesus seemed unusually cheerful; he was once more like his normal self. The seriousness of weeks had gone, and he inspired all of them with his words of faith, hope, and courage.
 \usection{Jesus’ Family Arrives}
 \vs p154 6:1 It was about 8:00 on this Sunday morning when 5 members of Jesus’ earth family arrived on the scene in response to the urgent summons of Jude’s sister\hyp{}in\hyp{}law. Of all his family in the flesh, only one, Ruth, believed wholeheartedly and continuously in the divinity of his mission on earth. Jude and James, and even Joseph, still retained much of their faith in Jesus, but they had permitted pride to interfere with their better judgment and real spiritual inclinations. Mary was likewise torn between love and fear, between mother love and family pride. Though she was harassed by doubts, she could never quite forget the visit of Gabriel ere Jesus was born. The Pharisees had been labouring to persuade Mary that Jesus was beside himself, demented. They urged her to go with her sons and seek to dissuade him from further efforts at public teaching. They assured Mary that soon Jesus’ health would break, and that only dishonour and disgrace could come upon the entire family as a result of allowing him to go on. And so, when the word came from Jude’s sister\hyp{}in\hyp{}law, all five of them started at once for Zebedee’s house, having been together at Mary’s home, where they had met with the Pharisees the evening before. They had talked with the Jerusalem leaders long into the night, and all were more or less convinced that Jesus was acting strangely, that he had acted strangely for some time. While Ruth could not explain all of his conduct, she insisted that he had always treated his family fairly and refused to agree to the program of trying to dissuade him from further work.
 \vs p154 6:2 On the way to Zebedee’s house they talked these things over and agreed among themselves to try to persuade Jesus to come home with them, for, said Mary: “I know I could influence my son if he would only come home and listen to me.” James and Jude had heard rumours concerning the plans to arrest Jesus and take him to Jerusalem for trial. They also feared for their own safety. As long as Jesus was a popular figure in the public eye, his family allowed matters to drift along, but now that the people of Capernaum and the leaders at Jerusalem had suddenly turned against him, they began keenly to feel the pressure of the supposed disgrace of their embarrassing position.
