--- a/tex/p157.tex
+++ b/tex/p157.tex
@@ -16,7 +16,7 @@
 \vs p157 1:4 It is not strange that you have a record of Peter’s catching a fish with a shekel in its mouth. In those days there were current many stories about finding treasures in the mouths of fishes; such tales of near miracles were commonplace. So, as Peter left them to go toward the boat, Jesus remarked, half\hyp{}humorously: \textcolour{ubdarkred}{“Strange that the sons of the king must pay tribute; usually it is the stranger who is taxed for the upkeep of the court, but it behoves us to afford no stumbling block for the authorities. Go hence! maybe you will catch the fish with the shekel in its mouth.”} Jesus having thus spoken, and Peter so soon appearing with the temple tax, it is not surprising that the episode became later expanded into a miracle as recorded by the writer of Matthew’s Gospel.
 \vs p157 1:5 Jesus, with Andrew and Peter, waited by the seashore until nearly sundown. Messengers brought them word that Mary’s house was still under surveillance; therefore, when it grew dark, the three waiting men entered their boat and slowly rowed away toward the eastern shore of the Sea of Galilee.
 \usection{At Bethsaida\hyp{}Julias}
-\vs p157 2:1 On Monday, August 8, while Jesus and the twelve apostles were encamped in Magadan Park, near Bethsaida\hyp{}Julias, more than 100 believers, the evangelists, the women’s corps, and others interested in the establishment of the kingdom, came over from Capernaum for a conference. And many of the Pharisees, learning that Jesus was here, came also. By this time some of the Sadducees were united with the Pharisees in their effort to entrap Jesus. Before going into the closed conference with the believers, Jesus held a public meeting at which the Pharisees were present, and they heckled the Master and otherwise sought to disturb the assembly. Said the leader of the disturbers: “Teacher, we would like you to give us a sign of your authority to teach, and then, when the same shall come to pass, all men will know that you have been sent by God.” And Jesus answered them: \textcolour{ubdarkred}{“When it is evening, you say it will be fair weather, for the heaven is red; in the morning it will be foul weather, for the heaven is red and lowering. When you see a cloud rising in the west, you say showers will come; when the wind blows from the south, you say scorching heat will come. How is it that you so well know how to discern the face of the heavens but are so utterly unable to discern the signs of the times? To those who would know the truth, already has a sign been given; but to an evil\hyp{}minded and hypocritical generation no sign shall be given.”}
+\vs p157 2:1 On Monday, August 8, while Jesus and the twelve apostles were encamped in Magadan Park, near Bethsaida\hyp{}Julias, more than one hundred believers, the evangelists, the women’s corps, and others interested in the establishment of the kingdom, came over from Capernaum for a conference. And many of the Pharisees, learning that Jesus was here, came also. By this time some of the Sadducees were united with the Pharisees in their effort to entrap Jesus. Before going into the closed conference with the believers, Jesus held a public meeting at which the Pharisees were present, and they heckled the Master and otherwise sought to disturb the assembly. Said the leader of the disturbers: “Teacher, we would like you to give us a sign of your authority to teach, and then, when the same shall come to pass, all men will know that you have been sent by God.” And Jesus answered them: \textcolour{ubdarkred}{“When it is evening, you say it will be fair weather, for the heaven is red; in the morning it will be foul weather, for the heaven is red and lowering. When you see a cloud rising in the west, you say showers will come; when the wind blows from the south, you say scorching heat will come. How is it that you so well know how to discern the face of the heavens but are so utterly unable to discern the signs of the times? To those who would know the truth, already has a sign been given; but to an evil\hyp{}minded and hypocritical generation no sign shall be given.”}
 \vs p157 2:2 \pc When Jesus had thus spoken, he withdrew and prepared for the evening conference with his followers. At this conference it was decided to undertake a united mission throughout all the cities and villages of the Decapolis as soon as Jesus and the twelve should return from their proposed visit to Caesarea\hyp{}Philippi. The Master participated in planning for the Decapolis mission and, in dismissing the company, said: \textcolour{ubdarkred}{“I say to you, beware of the leaven of the Pharisees and the Sadducees. Be not deceived by their show of much learning and by their profound loyalty to the forms of religion. Be only concerned with the spirit of living truth and the power of true religion. It is not the fear of a dead religion that will save you but rather your faith in a living experience in the spiritual realities of the kingdom. Do not allow yourselves to become blinded by prejudice and paralysed by fear. Neither permit reverence for the traditions so to pervert your understanding that your eyes see not and your ears hear not. It is not the purpose of true religion merely to bring peace but rather to ensure progress. And there can be no peace in the heart or progress in the mind unless you fall wholeheartedly in love with truth, the ideals of eternal realities. The issues of life and death are being set before you --- the sinful pleasures of time against the righteous realities of eternity. Even now you should begin to find deliverance from the bondage of fear and doubt as you enter upon the living of the new life of faith and hope. And when the feelings of service for your fellow men arise within your soul, do not stifle them; when the emotions of love for your neighbour well up within your heart, give expression to such urges of affection in intelligent ministry to the real needs of your fellows.”}
 \usection{Peter’s Confession}
 \vs p157 3:1 Early Tuesday morning Jesus and the twelve apostles left Magadan Park for Caesarea\hyp{}Philippi, the capital of the Tetrarch Philip’s domain. Caesarea\hyp{}Philippi was situated in a region of wondrous beauty. It nestled in a charming valley between scenic hills where the Jordan poured forth from an underground cave. The heights of Mount Hermon were in full view to the north, while from the hills just to the south a magnificent view was had of the upper Jordan and the Sea of Galilee.
