--- a/tex/p165.tex
+++ b/tex/p165.tex
@@ -15,7 +15,7 @@
 \vs p165 1:2 By the middle of March, the time when Jesus began his journey toward Jerusalem, over 4,000 persons composed the large audience which heard Jesus or Peter preach each morning. The Master chose to terminate his work on earth when the interest in his message had reached a high point, the highest point attained under this second or nonmiraculous phase of the progress of the kingdom. While \bibfrac{3}{4}\ts{ers} of the multitude were truth seekers, there were also present a large number of Pharisees from Jerusalem and elsewhere, together with many doubters and cavillers.
 \vs p165 1:3 Jesus and the twelve apostles devoted much of their time to the multitude assembled at the Pella camp. The twelve paid little or no attention to the field work, only going out with Jesus to visit Abner’s associates from time to time. Abner was very familiar with the Perean district since this was the field in which his former master, John the Baptist, had done most of his work. After beginning the Perean mission, Abner and the seventy never returned to the Pella camp.
 \usection{Sermon on the Good Shepherd}
-\vs p165 2:1 A company of over 300 Jerusalemites, Pharisees and others, followed Jesus north to Pella when he hastened away from the jurisdiction of the Jewish rulers at the ending of the feast of the dedication; and it was in the presence of these Jewish teachers and leaders, as well as in the hearing of the twelve apostles, that Jesus preached the sermon on the “Good Shepherd.” After half an hour of informal discussion, speaking to a group of about 100, Jesus said:
+\vs p165 2:1 A company of over 300 Jerusalemites, Pharisees and others, followed Jesus north to Pella when he hastened away from the jurisdiction of the Jewish rulers at the ending of the feast of the dedication; and it was in the presence of these Jewish teachers and leaders, as well as in the hearing of the twelve apostles, that Jesus preached the sermon on the “Good Shepherd.” After half an hour of informal discussion, speaking to a group of about one hundred, Jesus said:
 \vs p165 2:2 \pc \textcolour{ubdarkred}{“On this night I have much to tell you, and since many of you are my disciples and some of you my bitter enemies, I will present my teaching in a parable, so that you may each take for yourself that which finds a reception in your heart.}
 \vs p165 2:3 \textcolour{ubdarkred}{“Tonight, here before me are men who would be willing to die for me and for this gospel of the kingdom, and some of them will so offer themselves in the years to come; and here also are some of you, slaves of tradition, who have followed me down from Jerusalem, and who, with your darkened and deluded leaders, seek to kill the Son of Man. The life which I now live in the flesh shall judge both of you, the true shepherds and the false shepherds. If the false shepherd were blind, he would have no sin, but you claim that you see; you profess to be teachers in Israel; therefore does your sin remain upon you.}
 \vs p165 2:4 \textcolour{ubdarkred}{“The true shepherd gathers his flock into the fold for the night in times of danger. And when the morning has come, he enters into the fold by the door, and when he calls, the sheep know his voice. Every shepherd who gains entrance to the sheepfold by any other means than by the door is a thief and a robber. The true shepherd enters the fold after the porter has opened the door for him, and his sheep, knowing his voice, come out at his word; and when they that are his are thus brought forth, the true shepherd goes before them; he leads the way and the sheep follow him. His sheep follow him because they know his voice; they will not follow a stranger. They will flee from the stranger because they know not his voice. This multitude which is gathered about us here are like sheep without a shepherd, but when we speak to them, they know the shepherd’s voice, and they follow after us; at least, those who hunger for truth and thirst for righteousness do. Some of you are not of my fold; you know not my voice, and you do not follow me. And because you are false shepherds, the sheep know not your voice and will not follow you.”}
