--- a/tex/p173.tex
+++ b/tex/p173.tex
@@ -14,7 +14,7 @@
 \vs p173 1:3 \pc But traffic in sacrificial animals and sundry merchandise was not the only way in which the courts of the temple were profaned. At this time there was fostered an extensive system of banking and commercial exchange which was carried on right within the temple precincts. And this all came about in the following manner: During the Asmonean dynasty the Jews coined their own silver money\fnst{\textbf{Jews coined their own silver money}, The ``Jewish money'' proper, coined during the years of Hasmonean dynasty (164\,--\,35\,B.C.) should not be confused with the Tyrian type half-shekels required for the Temple tax and other offerings (cf.~Mishna Bek.8.7) and probably minted in Jerusalem after the mint in Tyre was closed down by Rome in 19\,B.C. The Hasmonean money (so far only bronze coins have been found) never contained images of gods or people or animals, like the Tyrian silver shekels and half-shekels (see the picture).}, and it had become the practice to require the temple dues of ½ shekel and all other temple fees to be paid with this Jewish coin. This regulation necessitated that money\hyp{}changers be licensed to exchange the many sorts of currency in circulation throughout Palestine and other provinces of the Roman Empire for this orthodox shekel of Jewish coining. The temple head tax, payable by all except women, slaves, and minors, was ½ shekel, a coin about the size of a 10¢ piece but twice as thick. By the times of Jesus the priests had also been exempted from the payment of temple dues. Accordingly, from the 15\ts{th} to the 25\ts{th} of the month preceding the Passover, accredited money\hyp{}changers erected their booths in the principal cities of Palestine for the purpose of providing the Jewish people with proper money to meet the temple dues after they had reached Jerusalem. After this 10\hyp{}day period these money\hyp{}changers moved on to Jerusalem and proceeded to set up their exchange tables in the courts of the temple. They were permitted to charge the equivalent of from 3¢ to 4¢ commission for the exchange of a coin valued at about 10¢, and in case a coin of larger value was offered for exchange, they were allowed to collect double. Likewise did these temple bankers profit from the exchange of all money intended for the purchase of sacrificial animals and for the payment of vows and the making of offerings.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jerusalem-Tyrian-halfshekel.jpg}\caption{Jerusalem half-shekel of Tyrian type, 45\,A.D. On the obverse we see Melkhart, god of the Phoenicians, corresponding to the Greek Hercules. The reverse shows the eagle and the letters ``KP''. The meaning of ``KP'' is unknown, but this abbreviation is only present in the coins minted outside Tyre.}\end{figure}}
 \vs p173 1:4 These temple money\hyp{}changers not only conducted a regular banking business for profit in the exchange of more than 20 sorts of money which the visiting pilgrims would periodically bring to Jerusalem, but they also engaged in all other kinds of transactions pertaining to the banking business. Both the temple treasury and the temple rulers profited tremendously from these commercial activities. It was not uncommon for the temple treasury to hold upwards of \$10,000,000 while the common people languished in poverty and continued to pay these unjust levies.
 \vs p173 1:5 \pc In the midst of this noisy aggregation of money\hyp{}changers, merchandisers, and cattle sellers, Jesus, on this Monday morning, attempted to teach the gospel of the heavenly kingdom. He was not alone in resenting this profanation of the temple; the common people, especially the Jewish visitors from foreign provinces, also heartily resented this profiteering desecration of their national house of worship. At this time the Sanhedrin itself held its regular meetings in a chamber surrounded by all this babble and confusion of trade and barter.
-\vs p173 1:6 As Jesus was about to begin his address, two things happened to arrest his attention. At the money table of a near\hyp{}by exchanger a violent and heated argument had arisen over the alleged overcharging of a Jew from Alexandria, while at the same moment the air was rent by the bellowing of a drove of some 100 bullocks which was being driven from one section of the animal pens to another. As Jesus paused, silently but thoughtfully contemplating this scene of commerce and confusion, close by he beheld a simple\hyp{}minded Galilean, a man he had once talked with in Iron, being ridiculed and jostled about by supercilious and would\hyp{}be superior Judeans; and all of this combined to produce one of those strange and periodic uprisings of indignant emotion in the soul of Jesus.
+\vs p173 1:6 As Jesus was about to begin his address, two things happened to arrest his attention. At the money table of a near\hyp{}by exchanger a violent and heated argument had arisen over the alleged overcharging of a Jew from Alexandria, while at the same moment the air was rent by the bellowing of a drove of some one hundred bullocks which was being driven from one section of the animal pens to another. As Jesus paused, silently but thoughtfully contemplating this scene of commerce and confusion, close by he beheld a simple\hyp{}minded Galilean, a man he had once talked with in Iron, being ridiculed and jostled about by supercilious and would\hyp{}be superior Judeans; and all of this combined to produce one of those strange and periodic uprisings of indignant emotion in the soul of Jesus.
 \vs p173 1:7 To the amazement of his apostles, standing near at hand, who refrained from participation in what so soon followed, Jesus stepped down from the teaching platform and, going over to the lad who was driving the cattle through the court, took from him his whip of cords and swiftly drove the animals from the temple. But that was not all; he strode majestically before the wondering gaze of the thousands assembled in the temple court to the farthest cattle pen and proceeded to open the gates of every stall and to drive out the imprisoned animals. By this time the assembled pilgrims were electrified, and with uproarious shouting they moved toward the bazaars and began to overturn the tables of the money\hyp{}changers. In less than five minutes all commerce had been swept from the temple. By the time the near\hyp{}by Roman guards had appeared on the scene, all was quiet, and the crowds had become orderly; Jesus, returning to the speaker’s stand, spoke to the multitude: \textcolour{ubdarkred}{“You have this day witnessed that which is written in the Scriptures: ‘My house shall be called a house of prayer for all nations, but you have made it a den of robbers.’”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Money-Changers.jpg}\caption{Jesus Casts Out The Money-Changers by William~Hole}\end{figure}}
 \vs p173 1:8 But before he could utter other words, the great assembly broke out in hosannas of praise, and presently a throng of youths stepped out from the crowd to sing grateful hymns of appreciation that the profane and profiteering merchandisers had been ejected from the sacred temple. By this time certain of the priests had arrived on the scene, and one of them said to Jesus, “Do you not hear what the children of the Levites say?” And the Master replied, \textcolour{ubdarkred}{“Have you never read, ‘Out of the mouths of babes and sucklings has praise been perfected’?”} And all the rest of that day while Jesus taught, guards set by the people stood watch at every archway, and they would not permit anyone to carry even an empty vessel across the temple courts.
 \vs p173 1:9 \pc When the chief priests and the scribes heard about these happenings, they were dumbfounded. All the more they feared the Master, and all the more they determined to destroy him. But they were nonplussed. They did not know how to accomplish his death, for they greatly feared the multitudes, who were now so outspoken in their approval of his overthrow of the profane profiteers. And all this day, a day of quiet and peace in the temple courts, the people heard Jesus’ teaching and literally hung on his words.
