--- a/tex/p179.tex
+++ b/tex/p179.tex
@@ -33,7 +33,7 @@
 \vs p179 3:7 In like manner the Master went around the table, in silence, washing the feet of his twelve apostles, not even passing by Judas. When Jesus had finished washing the feet of the 12, he donned his cloak, returned to his place as host, and after looking over his bewildered apostles, said:
 \vs p179 3:8 \pc \textcolour{ubdarkred}{“Do you really understand what I have done to you? You call me Master, and you say well, for so I am. If, then, the Master has washed your feet, why was it that you were unwilling to wash one another’s feet? What lesson should you learn from this parable in which the Master so willingly does that service which his brethren were unwilling to do for one another? Verily, verily, I say to you: A servant is not greater than his master; neither is one who is sent greater than he who sends him. You have seen the way of service in my life among you, and blessed are you who will have the gracious courage so to serve. But why are you so slow to learn that the secret of greatness in the spiritual kingdom is not like the methods of power in the material world?}
 \vs p179 3:9 \textcolour{ubdarkred}{“When I came into this chamber tonight, you were not content proudly to refuse to wash one another’s feet, but you must also fall to disputing among yourselves as to who should have the places of honour at my table. Such honours the Pharisees and the children of this world seek, but it should not be so among the ambassadors of the heavenly kingdom. Do you not know that there can be no place of preferment at my table? Do you not understand that I love each of you as I do the others? Do you not know that the place nearest me, as men regard such honours, can mean nothing concerning your standing in the kingdom of heaven? You know that the kings of the gentiles have lordship over their subjects, while those who exercise this authority are sometimes called benefactors. But it shall not be so in the kingdom of heaven. He who would be great among you, let him become as the younger; while he who would be chief, let him become as one who serves. Who is the greater, he who sits at meat, or he who serves? Is it not commonly regarded that he who sits at meat is the greater? But you will observe that I am among you as one who serves. If you are willing to become fellow servants with me in doing the Father’s will, in the kingdom to come you shall sit with me in power, still doing the Father’s will in future glory.”}
-\vs p179 3:10 When Jesus had finished speaking, the Alpheus twins brought on the bread and wine, with the bitter herbs and the paste of dried fruits, for the next course of the Last Supper.
+\vs p179 3:10 When Jesus had finished speaking, the Alpheus twins\tunemarkup{pgnexus10}{\linebreak} brought on the bread and wine, with the bitter herbs and the paste of dried fruits, for the next course of the Last Supper.
 \usection{Last Words to the Betrayer}
 \vs p179 4:1 For some minutes the apostles ate in silence, but under the influence of the Master’s cheerful demeanour they were soon drawn into conversation, and ere long the meal was proceeding as if nothing out of the ordinary had occurred to interfere with the good cheer and social accord of this extraordinary occasion. After some time had elapsed, in about the middle of this second course of the meal, Jesus, looking them over, said: \textcolour{ubdarkred}{“I have told you how much I desired to have this supper with you, and knowing how the evil forces of darkness have conspired to bring about the death of the Son of Man, I determined to eat this supper with you in this secret chamber and a day in advance of the Passover since I will not be with you by this time tomorrow night. I have repeatedly told you that I must return to the Father. Now has my hour come, but it was not required that one of you should betray me into the hands of my enemies.”}
 \vs p179 4:2 When the twelve heard this, having already been robbed of much of their self\hyp{}assertiveness and self\hyp{}confidence by the parable of the feet washing and the Master’s subsequent discourse, they began to look at one another while in disconcerted tones they hesitatingly inquired, “Is it I?” And when they had all so inquired, Jesus said: \textcolour{ubdarkred}{“While it is necessary that I go to the Father, it was not required that one of you should become a traitor to fulfil the Father’s will. This is the coming to fruit of the concealed evil in the heart of one who failed to love the truth with his whole soul. How deceitful is the intellectual pride that precedes the spiritual downfall! My friend of many years, who even now eats my bread, will be willing to betray me, even as he now dips his hand with me in the dish.”}
