--- a/tex/p185.tex
+++ b/tex/p185.tex
@@ -10,7 +10,7 @@
 \author{Midwayer Commission}
 \vs p185 0:1 Shortly after 6:00 on this Friday morning, April 7, A.D.\,30, Jesus was brought before Pilate, the Roman procurator who governed Judea, Samaria, and Idumea under the immediate supervision of the legatus of Syria. The Master was taken into the presence of the Roman governor by the temple guards, bound, and was accompanied by about 50 of his accusers, including the Sanhedrist court (principally Sadduceans), Judas Iscariot, and the high priest, Caiaphas, and by the Apostle John. Annas did not appear before Pilate.
 \vs p185 0:2 Pilate was up and ready to receive this group of early morning callers, having been informed by those who had secured his consent, the previous evening, to employ the Roman soldiers in arresting the Son of Man, that Jesus would be early brought before him. This trial was arranged to take place in front of the praetorium, an addition to the fortress of Antonia, where Pilate and his wife made their headquarters when stopping in Jerusalem.
-\vs p185 0:3 Though Pilate conducted much of Jesus’ examination within the praetorium halls, the public trial was held outside on the steps leading up to the main entrance. This was a concession to the Jews, who refused to enter any gentile building where leaven might be used on this day of preparation for the Passover. Such conduct would not only render them ceremonially unclean and thereby debar them from partaking of the afternoon feast of thanksgiving but would also necessitate their subjection to purification ceremonies after sundown, before they would be eligible to partake of the Passover supper.
+\vs p185 0:3 Though Pilate conducted much of Jesus’ examination with\-in the praetorium halls, the public trial was held outside on the steps leading up to the main entrance. This was a concession to the Jews, who refused to enter any gentile building where leaven might be used on this day of preparation for the Passover. Such conduct would not only render them ceremonially unclean and thereby debar them from partaking of the afternoon feast of thanksgiving but would also necessitate their subjection to purification ceremonies after sundown, before they would be eligible to partake of the Passover supper.
 \vs p185 0:4 Although these Jews were not at all bothered in conscience as they intrigued to effect the judicial murder of Jesus, they were nonetheless scrupulous regarding all these matters of ceremonial cleanness and traditional regularity. And these Jews have not been the only ones to fail in the recognition of high and holy obligations of a divine nature while giving meticulous attention to things of trifling importance to human welfare in both time and eternity.
 \usection{Pontius Pilate}
 \vs p185 1:1 If Pontius Pilate had not been a reasonably good governor of the minor provinces, Tiberius would hardly have suffered him to remain as procurator of Judea for ten years. Although he was a fairly good administrator, he was a moral coward. He was not a big enough man to comprehend the nature of his task as governor of the Jews. He failed to grasp the fact that these Hebrews had a \bibemph{real} religion, a faith for which they were willing to die, and that millions upon millions of them, scattered here and there throughout the empire, looked to Jerusalem as the shrine of their faith and held the Sanhedrin in respect as the highest tribunal on earth.
