--- a/tex/p188.tex
+++ b/tex/p188.tex
@@ -33,7 +33,7 @@
 \vs p188 3:9 \ublistelem{4.}\bibnobreakspace We think the human or mortal consciousness of Jesus slept during these 36 hours. We have reason to believe that the human Jesus knew nothing of what transpired in the universe during this period. To the mortal consciousness there appeared no lapse of time; the resurrection of life followed the sleep of death as of the same instant.
 \vs p188 3:10 \pc And this is about all we can place on record regarding the status of Jesus during this period of the tomb. There are a number of correlated facts to which we can allude, although we are hardly competent to undertake their interpretation.
 \vs p188 3:11 In the vast court of the resurrection halls of the first mansion world of Satania, there may now be observed a magnificent material\hyp{}morontia structure known as the “Michael Memorial,” now bearing the seal of Gabriel. This memorial was created shortly after Michael departed from this world, and it bears this inscription: “In commemoration of the mortal transit of Jesus of Nazareth on Urantia.”
-\vs p188 3:12 There are records extant which show that during this period the supreme council of Salvington, numbering 100, held an executive meeting on Urantia under the presidency of Gabriel. There are also records showing that the Ancients of Days of Uversa communicated with Michael regarding the status of the universe of Nebadon during this time.
+\vs p188 3:12 There are records extant which show that during this period the supreme council of Salvington, numbering one hundred, held an executive meeting on Urantia under the presidency of Gabriel. There are also records showing that the Ancients of Days of Uversa communicated with Michael regarding the status of the universe of Nebadon during this time.
 \vs p188 3:13 We know that at least one message passed between Michael and Immanuel on Salvington while the Master’s body lay in the tomb.
 \vs p188 3:14 There is good reason for believing that some personality sat in the seat of Caligastia in the system council of the Planetary Princes on Jerusem which convened while the body of Jesus rested in the tomb.
 \vs p188 3:15 The records of Edentia indicate that the Constellation Father of Norlatiadek was on Urantia, and that he received instructions from Michael during this time of the tomb.
