--- a/tex/p195.tex
+++ b/tex/p195.tex
@@ -149,7 +149,7 @@
 \vs p195 9:7 Selfish men and women simply will not pay such a price for even the greatest spiritual treasure ever offered mortal man. Only when man has become sufficiently disillusioned by the sorrowful disappointments attendant upon the foolish and deceptive pursuits of selfishness, and subsequent to the discovery of the barrenness of formalized religion, will he be disposed to turn wholeheartedly to the gospel of the kingdom, the religion of Jesus of Nazareth.
 \vs p195 9:8 The world needs more firsthand religion. Even Christianity --- the best of the religions of the XX century --- is not only a religion \bibemph{about} Jesus, but it is so largely one which men experience secondhand. They take their religion wholly as handed down by their accepted religious teachers. What an awakening the world would experience if it could only see Jesus as he really lived on earth and know, firsthand, his life\hyp{}giving teachings! Descriptive words of things beautiful cannot thrill like the sight thereof, neither can creedal words inspire men’s souls like the experience of knowing the presence of God. But expectant faith will ever keep the hope\hyp{}door of man’s soul open for the entrance of the eternal spiritual realities of the divine values of the worlds beyond.
 \vs p195 9:9 \pc Christianity has dared to lower its ideals before the challenge of human greed, war\hyp{}madness, and the lust for power; but the religion of Jesus stands as the unsullied and transcendent spiritual summons, calling to the best there is in man to rise above all these legacies of animal evolution and, by grace, attain the moral heights of true human destiny.
-\vs p195 9:10 Christianity is threatened by slow death from formalism, over\hyp{}organization, intellectualism, and other nonspiritual trends. The modern Christian church is not such a brotherhood of dynamic believers as Jesus commissioned continuously to effect the spiritual transformation of successive generations of mankind.
+\vs p195 9:10 Christianity is threatened by slow death from formalism, over\hyp{}organization, intellectualism, and other nonspiritual\tunemarkup{pgnexus10}{\linebreak} trends. The modern Christian church is not such a brotherhood of dynamic believers as Jesus commissioned continuously to effect the spiritual transformation of successive generations of mankind.
 \vs p195 9:11 So\hyp{}called Christianity has become a social and cultural movement as well as a religious belief and practice. The stream of modern Christianity drains many an ancient pagan swamp and many a barbarian morass; many olden cultural watersheds drain into this present\hyp{}day cultural stream as well as the high Galilean tablelands which are supposed to be its exclusive source.
 \usection{The Future}
 \vs p195 10:1 Christianity has indeed done a great service for this world, but what is now most needed is Jesus. The world needs to see Jesus living again on earth in the experience of spirit\hyp{}born mortals who effectively reveal the Master to all men. It is futile to talk about a revival of primitive Christianity; you must go forward from where you find yourselves. Modern culture must become spiritually baptized with a new revelation of Jesus’ life and illuminated with a new understanding of his gospel of eternal salvation. And when Jesus becomes thus lifted up, he will draw all men to himself. Jesus’ disciples should be more than conquerors, even overflowing sources of inspiration and enhanced living to all men. Religion is only an exalted humanism until it is made divine by the discovery of the reality of the presence of God in personal experience.
