--- a/tex/p196.tex
+++ b/tex/p196.tex
@@ -51,7 +51,7 @@
 \vs p196 3:5 Physical certainty consists in the logic of science; moral certainty, in the wisdom of philosophy; spiritual certainty, in the truth of genuine religious experience.
 \vs p196 3:6 The mind of man can attain high levels of spiritual insight and corresponding spheres of divinity of values because it is not wholly material. There is a spirit nucleus in the mind of man --- the Adjuster of the divine presence. There are three separate evidences of this spirit indwelling of the human mind:
 \vs p196 3:7 \ublistelem{1.}\bibnobreakspace Humanitarian fellowship --- love. The purely animal mind may be gregarious for self\hyp{}protection, but only the spirit\hyp{}indwelt intellect is unselfishly altruistic and unconditionally loving.
-\vs p196 3:8 \ublistelem{2.}\bibnobreakspace Interpretation of the universe --- wisdom. Only the spirit\hyp{}indwelt mind can comprehend that the universe is friendly to the individual.
+\vs p196 3:8 \ublistelem{2.}\bibnobreakspace Interpretation of the universe --- wisdom. Only the spirit\hyp{}indwelt mind can comprehend that the universe is friend\-ly to the individual.
 \vs p196 3:9 \ublistelem{3.}\bibnobreakspace Spiritual evaluation of life --- worship. Only the spirit\hyp{}indwelt man can realize the divine presence and seek to attain a fuller experience in and with this foretaste of divinity.
 \vs p196 3:10 \pc The human mind does not create real values; human experience does not yield universe insight. Concerning insight, the recognition of moral values and the discernment of spiritual meanings, all that the human mind can do is to discover, recognize, interpret, and \bibemph{choose.}
 \vs p196 3:11 The moral values of the universe become intellectual possessions by the exercise of the three basic judgments, or choices, of the mortal mind:
