--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -604,7 +604,7 @@
 \qstart{Which of these is a typical use of antigravity in the grand universe?}
 {establish physical equilibrium of the matter and energies}{1}
 {transport}{0}
-{overriding natural course of events on evolutionary worlds}{0}
+{overriding natural course of events on the worlds}{0}
 {amusement of the Deities}{0}
 \qstop
 
@@ -5856,7 +5856,7 @@
 \qstop
 
 \qstart{What did Jesus achieve during his 6 week sojourn on Mount Hermon prior to baptism?}
-{Achieved the circles of mind-understanding and personality-control}{0}
+{Achieved the circles of mind-understanding and per\-so\-na\-li\-ty\hyp{}control}{0}
 {Wrestled in spirit with Satan (representing Lucifer), and Caligastia in ``the great temptation''}{0}
 {Both of these}{1}
 {None of these}{0}
