--- a/tex/urantia-hyphen-en.tex
+++ b/tex/urantia-hyphen-en.tex
@@ -1,4 +1,42 @@
 \hyphenation{%
+Na-ba-tae-ans
+friend-ly
+found-er
+found-ers
+griev-ous
+griev-ous-ly
+heav-en
+Ze-lo-tes
+Leb-be-us
+man-u-script
+Ga-nid
+fa-vour
+fa-voured
+un-as-signed
+ve-he-ment
+ve-he-ment-ly
+an-ti-priest-craft
+proph-et
+proph-ets
+teach-er
+nec-ro-man-cy
+nec-ro-man-cer
+nec-ro-man-cers
+fe-tishes
+fe-tish
+fa-vour-ably
+fa-vour-able
+bond-age
+pre-state
+un-attained
+au-ton-o-mous
+as-tro-nom-i-cal
+in-ter-change-able
+in-ter-change-ably
+tri-n-i-tiz-ed
+at-tri-bute
+at-tri-butes
+re-po-si-to-ry
 whe-ther
 Ga-li-lee
 fi-na-li-ter
@@ -194,6 +232,7 @@ pre-sent
 pre-sents
 an-a-tom-ic
 ceph-a-lop-ods
+Ad-am-ic
 Ad-am-son-ite
 Ad-am-son-ites
 An-don-ite
