--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -5,8 +5,8 @@
 \uminitoc{Tertiary and Quartan Stages}
 \uminitoc{Origin of Monmatia --- The Urantia Solar System}
 \uminitoc{The Solar System Stage --- The Planet-Forming Era}
-\uminitoc{The Meteoric Era --- The Volcanic Age The Primitive Planetary At...}
-\uminitoc{Crustal Stabilization The Age of Earthquakes The World Ocean and...}
+\uminitoc{The Meteoric Era --- The Volcanic Age}
+\uminitoc{The Age of Earthquakes}
 \author{Life Carrier}
 \vs p057 0:1 In presenting excerpts from the archives of Jerusem for the records of Urantia respecting its antecedents and early history, we are directed to reckon time in terms of current usage --- the present leap\hyp{}year calendar of 365\,\bibfrac{1}{4} days to the year. As a rule, no attempt will be made to give exact years, though they are of record. We will use the nearest whole numbers as the better method of presenting these historic facts.
 \vs p057 0:2 When referring to an event as of one or two millions of years ago, we intend to date such an occurrence back that number of years from the early decades of the XX century of the Christian era. We will thus depict these far\hyp{}distant events as occurring in even periods of thousands, millions, and billions of years.
@@ -14,7 +14,7 @@
 \vs p057 1:1 Urantia is of origin in your sun, and your sun is one of the multifarious offspring of the Andronover nebula, which was onetime organized as a component part of the physical power and material matter of the local universe of Nebadon. And this great nebula itself took origin in the universal force\hyp{}charge of space in the superuniverse of Orvonton, long, long ago.
 \vs p057 1:2 At the time of the beginning of this recital, the Primary Master Force Organizers of Paradise had long been in full control of the space\hyp{}energies which were later organized as the Andronover nebula.
 \vs p057 1:3 \pc \bibemph{987,000,000,000} years ago associate force organizer and then acting inspector number 811,307 of the Orvonton series, travelling out from Uversa, reported to the Ancients of Days that space conditions were favourable for the initiation of materialization phenomena in a certain sector of the, then, easterly segment of Orvonton.
-\vs p057 1:4 \pc \bibemph{900,000,000,000} years ago, the Uversa archives testify, there was recorded a permit issued by the Uversa Council of Equilibrium to the superuniverse government authorizing the dispatch of a force organizer and staff to the region previously designated by inspector number 811,307. The Orvonton authorities commissioned the original discoverer of this potential universe to execute the mandate of the Ancients of Days calling for the organization of a new material creation.\fnc{900,000,000,000 years \bibtextul{ago} the Uversa archives testify\ldots{} \bibexpl{The added comma correctly separates the introductory phrase from the body of the sentence (and is consistent with the structure of the other sentences in this list).}}
+\vs p057 1:4 \pc \bibemph{900,000,000,000} years ago,\fnc{No comma in 1955 edition.} the Uversa archives testify, there was recorded a permit issued by the Uversa Council of Equilibrium to the superuniverse government authorizing the dispatch of a force organizer and staff to the region previously designated by inspector number 811,307. The Orvonton authorities commissioned the original discoverer of this potential universe to execute the mandate of the Ancients of Days calling for the organization of a new material creation.
 \vs p057 1:5 The recording of this permit signifies that the force organizer and staff had already departed from Uversa on the long journey to that easterly space sector where they were subsequently to engage in those protracted activities which would terminate in the emergence of a new physical creation in Orvonton.
 \vs p057 1:6 \pc \bibemph{875,000,000,000} years ago the enormous Andronover nebula number 876,926 was duly initiated. Only the presence of the force organizer and the liaison staff was required to inaugurate the energy whirl which eventually grew into this vast cyclone of space. Subsequent to the initiation of such nebular revolutions, the living force organizers simply withdraw at right angles to the plane of the revolutionary disk, and from that time forward, the inherent qualities of energy ensure the progressive and orderly evolution of such a new physical system.
 \vs p057 1:7 At about this time the narrative shifts to the functioning of the personalities of the superuniverse. In reality the story has its proper beginning at this point --- at just about the time the Paradise force organizers are preparing to withdraw, having made the space\hyp{}energy conditions ready for the action of the power directors and physical controllers of the superuniverse of Orvonton.
@@ -80,7 +80,7 @@
 \vs p057 7:4 \pc \bibemph{1,500,000,000} years ago the earth was \bibfrac{2}{3}\ts{rds} its present size, while the moon was nearing its present mass. Earth’s rapid gain over the moon in size enabled it to begin the slow robbery of the little atmosphere which its satellite originally had.
 \vs p057 7:5 Volcanic action is now at its height. The whole earth is a veritable fiery inferno, the surface resembling its earlier molten state before the heavier metals gravitated toward the centre. \bibemph{This is the volcanic age.} Nevertheless, a crust, consisting chiefly of the comparatively lighter granite, is gradually forming. The stage is being set for a planet which can someday support life.
 \vs p057 7:6 \pc The primitive planetary atmosphere is slowly evolving, now containing some water vapour, carbon monoxide, carbon dioxide, and hydrogen chloride, but there is little or no free nitrogen or free oxygen. The atmosphere of a world in the volcanic age presents a queer spectacle. In addition to the gases enumerated it is heavily charged with numerous volcanic gases and, as the air belt matures, with the combustion products of the heavy meteoric showers which are constantly hurtling in upon the planetary surface. Such meteoric combustion keeps the atmospheric oxygen very nearly exhausted, and the rate of meteoric bombardment is still tremendous.
-\vs p057 7:7 \pc Presently, the atmosphere became more settled and cooled sufficiently to start precipitation of rain on the hot rocky surface of the planet. For thousands of years Urantia was enveloped in one vast and continuous blanket of steam. And during these ages the sun never shone upon the earth’s surface.
+\vs p057 7:7 \pc Presently, the atmosphere became more settled and\tunemarkup{pgnexus10}{\linebreak} cooled sufficiently to start precipitation of rain on the hot rocky surface of the planet. For thousands of years Urantia was enveloped in one vast and continuous blanket of steam. And during these ages the sun never shone upon the earth’s surface.
 \vs p057 7:8 Much of the carbon of the atmosphere was abstracted to form the carbonates of the various metals which abounded in the superficial layers of the planet. Later on, much greater quantities of these carbon gases were consumed by the early and prolific plant life.
 \vs p057 7:9 Even in the later periods the continuing lava flows and the incoming meteors kept the oxygen of the air almost completely used up. Even the early deposits of the soon appearing primitive ocean contain no coloured stones or shales. And for a long time after this ocean appeared, there was virtually no free oxygen in the atmosphere; and it did not appear in significant quantities until it was later generated by the seaweeds and other forms of vegetable life.
 \vs p057 7:10 The primitive planetary atmosphere of the volcanic age affords little protection against the collisional impacts of the meteoric swarms. Millions upon millions of meteors are able to penetrate such an air belt to smash against the planetary crust as solid bodies. But as time passes, fewer and fewer prove large enough to resist the ever\hyp{}stronger friction shield of the oxygen\hyp{}enriching atmosphere of the later eras.
