--- a/tex/p140.tex
+++ b/tex/p140.tex
@@ -155,6 +155,6 @@
 \vs p140 10:6 This new religion of Jesus was not without its practical implications, but whatever of practical political, social, or economic value there is to be found in his teaching is the natural outworking of this inner experience of the soul as it manifests the fruits of the spirit in the spontaneous daily ministry of genuine personal religious experience.
 \vs p140 10:7 After Jesus and Matthew had finished talking, Simon Zelotes asked, “But, Master, are \bibemph{all} men the sons of God?” And Jesus answered: \textcolour{ubdarkred}{“Yes, Simon, all men are the sons of God, and that is the good news you are going to proclaim.”} But the apostles could not grasp such a doctrine; it was a new, strange, and startling announcement. And it was because of his desire to impress this truth upon them that Jesus taught his followers to treat all men as their brothers.
 \vs p140 10:8 In response to a question asked by Andrew, the Master made it clear that the morality of his teaching was inseparable from the religion of his living. He taught morality, not from the \bibemph{nature} of man, but from the \bibemph{relation} of man to God.
-\vs p140 10:9 \pc John asked Jesus, “Master, what is the kingdom of heaven?” And Jesus answered: \textcolour{ubdarkred}{“The kingdom of heaven consists in these three essentials: first, recognition of the fact of the sovereignty of God; second, belief in the truth of sonship with God; and third, faith in the effectiveness of the supreme human desire to do the will of God --- to be like God. And this is the good news of the gospel: that by faith every mortal may have all these essentials of salvation.”}
+\vs p140 10:9 \pc John asked Jesus, “Master, what is the kingdom of\tunemarkup{pgnexus10}{\linebreak} heaven?” And Jesus answered: \textcolour{ubdarkred}{“The kingdom of heaven consists in these three essentials: first, recognition of the fact of the sovereignty of God; second, belief in the truth of sonship with God; and third, faith in the effectiveness of the supreme human desire to do the will of God --- to be like God. And this is the good news of the gospel: that by faith every mortal may have all these essentials of salvation.”}
 \vs p140 10:10 \pc And now the week of waiting was over, and they prepared to depart on the morrow for Jerusalem.
 \quizlink
