--- a/tex/p148.tex
+++ b/tex/p148.tex
@@ -17,8 +17,8 @@
 \usection{A New School of the Prophets}
 \vs p148 1:1 Peter, James, and Andrew were the committee designated by Jesus to pass upon applicants for admission to the school of evangelists. All the races and nationalities of the Roman world and the East, as far as India, were represented among the students in this new school of the prophets. This school was conducted on the plan of learning and doing. What the students learned during the forenoon they taught to the assembly by the seaside during the afternoon. After supper they informally discussed both the learning of the forenoon and the teaching of the afternoon.
 \vs p148 1:2 Each of the apostolic teachers taught his own view of the gospel of the kingdom. They made no effort to teach just alike; there was no standardized or dogmatic formulation of theologic doctrines. Though they all taught the \bibemph{same truth,} each apostle presented his own personal interpretation of the Master’s teaching. And Jesus upheld this presentation of the diversity of personal experience in the things of the kingdom, unfailingly harmonizing and co\hyp{}ordinating these many and divergent views of the gospel at his weekly question hours. Notwithstanding this great degree of personal liberty in matters of teaching, Simon Peter tended to dominate the theology of the school of evangelists. Next to Peter, James Zebedee exerted the greatest personal influence.
-\vs p148 1:3 The 100 and more evangelists trained during this five months by the seaside represented the material from which (excepting Abner and John’s apostles) the later seventy gospel teachers and preachers were drawn. The school of evangelists did not have everything in common to the same degree as did the twelve.
-\vs p148 1:4 These evangelists, though they taught and preached the gospel, did not baptize believers until after they were later ordained and commissioned by Jesus as the seventy messengers of the kingdom. Only 7 of the large number healed at the sundown scene at this place were to be found among these evangelistic students. The nobleman’s son of Capernaum was one of those trained for gospel service in Peter’s school.
+\vs p148 1:3 The one hundred and more evangelists trained during this five months by the seaside represented the material from which (excepting Abner and John’s apostles) the later seventy gospel teachers and preachers were drawn. The school of evangelists did not have everything in common to the same degree as did the twelve.
+\vs p148 1:4 These evangelists, though they taught and preached the gospel, did not baptize believers until after they were later ordained and commissioned by Jesus as the seventy messengers of the kingdom. Only seven of the large number healed at the sundown scene at this place were to be found among these evangelistic students. The nobleman’s son of Capernaum was one of those trained for gospel service in Peter’s school.
 \usection{The Bethsaida Hospital}
 \vs p148 2:1 In connection with the seaside encampment, Elman, the Syrian physician, with the assistance of a corps of 25 young women and twelve men, organized and conducted for four months what should be regarded as the kingdom’s first hospital. At this infirmary, located a short distance to the south of the main tented city, they treated the sick in accordance with all known material methods as well as by the spiritual practices of prayer and faith encouragement. Jesus visited the sick of this encampment not less than three times a week and made personal contact with each sufferer. As far as we know, no so\hyp{}called miracles of supernatural healing occurred among the 1,000 afflicted and ailing persons who went away from this infirmary improved or cured. However, the vast majority of these benefited individuals ceased not to proclaim that Jesus had healed them.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/First-Hospital.jpg}\caption{The Kingdom's First Hospital by Russ~Docken}\end{figure}}
 \vs p148 2:2 Many of the cures effected by Jesus in connection with his ministry in behalf of Elman’s patients did, indeed, appear to resemble the working of miracles, but we were instructed that they were only just such transformations of mind and spirit as may occur in the experience of expectant and faith\hyp{}dominated persons who are under the immediate and inspirational influence of a strong, positive, and beneficent personality whose ministry banishes fear and destroys anxiety.
@@ -28,7 +28,7 @@
 \usection{The Father’s Business}
 \vs p148 3:1 Throughout this period Jesus conducted public services at the encampment less than a dozen times and spoke only once in the Capernaum synagogue, the second Sabbath before their departure with the newly trained evangelists upon their second public preaching tour of Galilee.
 \vs p148 3:2 Not since his baptism had the Master been so much alone as during this period of the evangelists’ training encampment at Bethsaida. Whenever any one of the apostles ventured to ask Jesus why he was absent so much from their midst, he would invariably answer that he was \textcolour{ubdarkred}{“about the Father’s business.”}
-\vs p148 3:3 During these periods of absence, Jesus was accompanied by only two of the apostles. He had released Peter, James, and John temporarily from their assignment as his personal companions that they might also participate in the work of training the new evangelistic candidates, numbering more than 100. When the Master desired to go to the hills about the Father’s business, he would summon to accompany him any two of the apostles who might be at liberty. In this way each of the twelve enjoyed an opportunity for close association and intimate contact with Jesus.
+\vs p148 3:3 During these periods of absence, Jesus was accompanied by only two of the apostles. He had released Peter, James, and John temporarily from their assignment as his personal companions that they might also participate in the work of training the new evangelistic candidates, numbering more than one hundred. When the Master desired to go to the hills about the Father’s business, he would summon to accompany him any two of the apostles who might be at liberty. In this way each of the twelve enjoyed an opportunity for close association and intimate contact with Jesus.
 \vs p148 3:4 It has not been revealed for the purposes of this record, but we have been led to infer that the Master, during many of these solitary seasons in the hills, was in direct and executive association with many of his chief directors of universe affairs. Ever since about the time of his baptism this incarnated Sovereign of our universe had become increasingly and consciously active in the direction of certain phases of universe administration. And we have always held the opinion that, in some way not revealed to his immediate associates, during these weeks of decreased participation in the affairs of earth he was engaged in the direction of those high spirit intelligences who were charged with the running of a vast universe, and that the human Jesus chose to designate such activities on his part as being \textcolour{ubdarkred}{“about his Father’s business.”}
 \vs p148 3:5 Many times, when Jesus was alone for hours, but when two of his apostles were near by, they observed his features undergo rapid and multitudinous changes, although they heard him speak no words. Neither did they observe any visible manifestation of celestial beings who might have been in communication with their Master, such as some of them did witness on a subsequent occasion.
 \usection{Evil, Sin, and Iniquity}
@@ -72,7 +72,7 @@
 \vs p148 8:2 \pc The Greek philosopher who had been won for the kingdom on the previous tour of Galilee returned with certain wealthy Jews of Alexandria, and once more they invited Jesus to come to their city for the purpose of establishing a joint school of philosophy and religion as well as an infirmary for the sick. But Jesus courteously declined the invitation.
 \vs p148 8:3 \pc About this time there arrived at the Bethsaida encampment a trance prophet from Bagdad, one Kirmeth. This supposed prophet had peculiar visions when in trance and dreamed fantastic dreams when his sleep was disturbed. He created a considerable disturbance at the camp, and Simon Zelotes was in favour of dealing rather roughly with the self\hyp{}deceived pretender, but Jesus intervened and allowed him entire freedom of action for a few days. All who heard his preaching soon recognized that his teaching was not sound as judged by the gospel of the kingdom. He shortly returned to Bagdad, taking with him only a half dozen unstable and erratic souls. But before Jesus interceded for the Bagdad prophet, David Zebedee, with the assistance of a self\hyp{}appointed committee, had taken Kirmeth out into the lake and, after repeatedly plunging him into the water, had advised him to depart hence --- to organize and build a camp of his own.
 \vs p148 8:4 \pc On this same day, Beth\hyp{}Marion, a Phoenician woman, became so fanatical that she went out of her head and, after almost drowning from trying to walk on the water, was sent away by her friends.
-\vs p148 8:5 \pc The new Jerusalem convert, Abraham the Pharisee, gave all of his worldly goods to the apostolic treasury, and this contribution did much to make possible the immediate sending forth of the 100 newly trained evangelists. Andrew had already announced the closing of the encampment, and everybody prepared either to go home or else to follow the evangelists into Galilee.
+\vs p148 8:5 \pc The new Jerusalem convert, Abraham the Pharisee, gave all of his worldly goods to the apostolic treasury, and this contribution did much to make possible the immediate sending forth of the one hundred newly trained evangelists. Andrew had already announced the closing of the encampment, and everybody prepared either to go home or else to follow the evangelists into Galilee.
 \usection{Healing the Paralytic}
 \vs p148 9:1 On Friday afternoon, October 1, when Jesus was holding his last meeting with the apostles, evangelists, and other leaders of the disbanding encampment, and with the six Pharisees from Jerusalem seated in the front row of this assembly in the spacious and enlarged front room of the Zebedee home, there occurred one of the strangest and most unique episodes of all Jesus’ earth life. The Master was, at this time, speaking as he stood in this large room, which had been built to accommodate these gatherings during the rainy season. The house was entirely surrounded by a vast concourse of people who were straining their ears to catch some part of Jesus’ discourse.
 \vs p148 9:2 While the house was thus thronged with people and entirely surrounded by eager listeners, a man long afflicted with paralysis was carried down from Capernaum on a small couch by his friends. This paralytic had heard that Jesus was about to leave Bethsaida, and having talked with Aaron the stone mason, who had been so recently made whole, he resolved to be carried into Jesus’ presence, where he could seek healing. His friends tried to gain entrance to Zebedee’s house by both the front and back doors, but too many people were crowded together. But the paralytic refused to accept defeat; he directed his friends to procure ladders by which they ascended to the roof of the room in which Jesus was speaking, and after loosening the tiles, they boldly lowered the sick man on his couch by ropes until the afflicted one rested on the floor immediately in front of the Master. When Jesus saw what they had done, he ceased speaking, while those who were with him in the room marveled at the perseverance of the sick man and his friends. Said the paralytic: “Master, I would not disturb your teaching, but I am determined to be made whole. I am not like those who received healing and immediately forgot your teaching. I would be made whole that I might serve in the kingdom of heaven.” Now, notwithstanding that this man’s affliction had been brought upon him by his own misspent life, Jesus, seeing his faith, said to the paralytic: \textcolour{ubdarkred}{“Son, fear not; your sins are forgiven. Your faith shall save you.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Paralytic.jpg}\caption{Jesus Heals The Paralytic by Harold~Copping}\end{figure}}
