--- a/tex/p152.tex
+++ b/tex/p152.tex
@@ -24,7 +24,7 @@
 \vs p152 2:5 \pc Philip had provided a three days’ supply of food for Jesus and the 12, which was in the custody of the Mark lad, their boy of all chores. By afternoon of this, the third day for almost half of this multitude, the food the people had brought with them was nearly exhausted. David Zebedee had no tented city here to feed and accommodate the crowds. Neither had Philip made food provision for such a multitude. But the people, even though they were hungry, would not go away. It was being quietly whispered about that Jesus, desiring to avoid trouble with both Herod and the Jerusalem leaders, had chosen this quiet spot outside the jurisdiction of all his enemies as the proper place to be crowned king. The enthusiasm of the people was rising every hour. Not a word was said to Jesus, though, of course, he knew all that was going on. Even the twelve apostles were still tainted with such notions, and especially the younger evangelists. The apostles who favoured this attempt to proclaim Jesus king were Peter, John, Simon Zelotes, and Judas Iscariot. Those opposing the plan were Andrew, James, Nathaniel, and Thomas. Matthew, Philip, and the Alpheus twins were noncommittal. The ringleader of this plot to make him king was Joab, one of the young evangelists.
 \vs p152 2:6 \pc This was the stage setting about 17:00 on Wednesday afternoon, when Jesus asked James Alpheus to summon Andrew and Philip. Said Jesus: \textcolour{ubdarkred}{“What shall we do with the multitude? They have been with us now 3 days, and many of them are hungry. They have no food.”} Philip and Andrew exchanged glances, and then Philip answered: “Master, you should send these people away so that they may go to the villages around about and buy themselves food.” And Andrew, fearing the materialization of the king plot, quickly joined with Philip, saying: “Yes, Master, I think it best that you dismiss the multitude so that they may go their way and buy food while you secure rest for a season.” By this time others of the twelve had joined the conference. Then said Jesus: \textcolour{ubdarkred}{“But I do not desire to send them away hungry; can you not feed them?”} This was too much for Philip, and he spoke right up: “Master, in this country place where can we buy bread for this multitude? 200 denarii worth would not be enough for lunch.”
 \vs p152 2:7 Before the apostles had an opportunity to express themselves, Jesus turned to Andrew and Philip, saying: \textcolour{ubdarkred}{“I do not want to send these people away. Here they are, like sheep without a shepherd. I would like to feed them. What food have we with us?”} While Philip was conversing with Matthew and Judas, Andrew sought out the Mark lad to ascertain how much was left of their store of provisions. He returned to Jesus, saying: “The lad has left only five barley loaves and two dried fishes” --- and Peter promptly added, “We have yet to eat this evening.”
-\vs p152 2:8 For a moment Jesus stood in silence. There was a faraway look in his eyes. The apostles said nothing. Jesus turned suddenly to Andrew and said, \textcolour{ubdarkred}{“Bring me the loaves and fishes.”} And when Andrew had brought the basket to Jesus, the Master said: \textcolour{ubdarkred}{“Direct the people to sit down on the grass in companies of 100 and appoint a leader over each group while you bring all of the evangelists here with us.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Five-Thousand.jpg}\caption{Feeding of the Five Thousand by Walter~Rane}\end{figure}}
+\vs p152 2:8 For a moment Jesus stood in silence. There was a faraway look in his eyes. The apostles said nothing. Jesus turned suddenly to Andrew and said, \textcolour{ubdarkred}{“Bring me the loaves and fishes.”} And when Andrew had brought the basket to Jesus, the Master said: \textcolour{ubdarkred}{“Direct the people to sit down on the grass in companies of one hundred and appoint a leader over each group while you bring all of the evangelists here with us.”}\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Five-Thousand.jpg}\caption{Feeding of the Five Thousand by Walter~Rane}\end{figure}}
 \vs p152 2:9 Jesus took up the loaves in his hands, and after he had given thanks, he broke the bread and gave to his apostles, who passed it on to their associates, who in turn carried it to the multitude. Jesus in like manner broke and distributed the fishes. And this multitude did eat and were filled. And when they had finished eating, Jesus said to the disciples: \textcolour{ubdarkred}{“Gather up the broken pieces that remain over so that nothing will be lost.”} And when they had finished gathering up the fragments, they had twelve basketfuls. They who ate of this extraordinary feast numbered about 5,000 men, women, and children.
 \vs p152 2:10 \pc And this is the first and only nature miracle which Jesus performed as a result of his conscious preplanning. It is true that his disciples were disposed to call many things miracles which were not, but this was a genuine supernatural ministration. In this case, so we were taught, Michael multiplied food elements as he always does except for the elimination of the time factor and the visible life channel.
 \usection{The King\hyp{}Making Episode}
